New Crowdin updates (#649)
* New translations: site.xml (Ukrainian)

* New translations: site.xml (Romanian)

* New translations: site.xml (French)

* New translations: site.xml (Spanish)

* New translations: site.xml (Afrikaans)

* New translations: site.xml (Arabic)

* New translations: site.xml (Catalan)

* New translations: site.xml (Czech)

* New translations: site.xml (Danish)

* New translations: site.xml (German)

* New translations: site.xml (Greek)

* New translations: site.xml (Finnish)

* New translations: site.xml (Hebrew)

* New translations: site.xml (Hungarian)

* New translations: site.xml (Italian)

* New translations: site.xml (Japanese)

* New translations: site.xml (Korean)

* New translations: site.xml (Dutch)

* New translations: site.xml (Polish)

* New translations: site.xml (Portuguese)

* New translations: site.xml (Russian)

* New translations: site.xml (Serbian (Cyrillic))

* New translations: site.xml (Swedish)

* New translations: site.xml (Turkish)

* New translations: site.xml (Chinese Simplified)

* New translations: site.xml (Chinese Traditional)

* New translations: site.xml (English)

* New translations: site.xml (Vietnamese)

* New translations: site.xml (Portuguese, Brazilian)

* New translations: site.xml (Thai)

* New translations: site.xml (Hindi)

* New translations: site.xml (Tagalog)

* New translations: faq.xml (Romanian)

* New translations: faq.xml (Afrikaans)

* New translations: faq.xml (Arabic)

* New translations: faq.xml (Catalan)

* New translations: faq.xml (Greek)

* New translations: faq.xml (Hungarian)

* New translations: faq.xml (Korean)

* New translations: faq.xml (Serbian (Cyrillic))

* New translations: faq.xml (Thai)

* New translations: faq.xml (Tagalog)

* New translations: faq.xml (Belarusian)

* New translations: site.xml (Belarusian)

* New translations: faq.xml (Indonesian)

* New translations: site.xml (Ind

--- a/translation/dest/settings/id-ID.xml
+++ b/translation/dest/settings/id-ID.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="settings">Settings</string>
-  <string name="closeAccount">Close account</string>
-  <string name="closingIsDefinitive">Closing is definitive. There is no going back. Are you sure?</string>
-  <string name="cantOpenSimilarAccount">You will not be allowed to open a new account with the same name, even if the case is different.</string>
-  <string name="changedMindDoNotCloseAccount">I changed my mind, don\'t close my account</string>
-  <string name="closeAccountExplanation">Are you sure you want to close your account? Closing your account is a permanent decision. You will NEVER be able to log in EVER AGAIN.</string>
-  <string name="thisAccountIsClosed">This account is closed.</string>
+  <string name="settings">Pengaturan</string>
+  <string name="closeAccount">Tutup akun</string>
+  <string name="closingIsDefinitive">Menghapus akun tidak dapat dibatalkan. Apakah anda yakin?</string>
+  <string name="cantOpenSimilarAccount">Anda tidak akan diizinkan untuk membuka akun baru dengan nama yang sama, meskipun besar-kecil hurufnya berbeda.</string>
+  <string name="changedMindDoNotCloseAccount">Saya akan berubah, jangan tutup akun saya</string>
+  <string name="closeAccountExplanation">Apakah Anda yakin ingin menutup akun Anda? Menutup akun Anda adalah keputusan permanen. Anda tidak akan PERNAH bisa MASUK lagi.</string>
+  <string name="thisAccountIsClosed">Akun ini telah ditutup.</string>
 </resources>
