--- a/translation/dest/study/id-ID.xml
+++ b/translation/dest/study/id-ID.xml
@@ -1,125 +1,125 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="private">Private</string>
-  <string name="myStudies">My studies</string>
-  <string name="studiesIContributeTo">Studies I contribute to</string>
-  <string name="myPublicStudies">My public studies</string>
-  <string name="myPrivateStudies">My private studies</string>
-  <string name="myFavoriteStudies">My favourite studies</string>
-  <string name="whatAreStudies">What are studies?</string>
-  <string name="allStudies">All studies</string>
-  <string name="studiesCreatedByX">Studies created by %s</string>
-  <string name="noneYet">None yet.</string>
-  <string name="hot">Hot</string>
-  <string name="dateAddedNewest">Date added (newest)</string>
-  <string name="dateAddedOldest">Date added (oldest)</string>
-  <string name="recentlyUpdated">Recently updated</string>
-  <string name="mostPopular">Most popular</string>
-  <string name="addNewChapter">Add a new chapter</string>
+  <string name="private">Pribadi</string>
+  <string name="myStudies">Studi saya</string>
+  <string name="studiesIContributeTo">Studi yang saya ikut berkontribusi</string>
+  <string name="myPublicStudies">Studi publik saya</string>
+  <string name="myPrivateStudies">Studi pribadi saya</string>
+  <string name="myFavoriteStudies">Studi favorit saya</string>
+  <string name="whatAreStudies">Apa itu studi?</string>
+  <string name="allStudies">Semua studi</string>
+  <string name="studiesCreatedByX">Studi dibuat oleh %s</string>
+  <string name="noneYet">Tidak ada.</string>
+  <string name="hot">Terhangat</string>
+  <string name="dateAddedNewest">Tanggal ditambahkan (terbaru)</string>
+  <string name="dateAddedOldest">Tanggal ditambahkan (terlama)</string>
+  <string name="recentlyUpdated">Baru saja diperbarui</string>
+  <string name="mostPopular">Paling populer</string>
+  <string name="addNewChapter">Tambahkan bab baru</string>
   <plurals name="nbChapters">
-    <item quantity="other">%s Chapters</item>
+    <item quantity="other">%s Bab</item>
   </plurals>
   <plurals name="nbGames">
-    <item quantity="other">%s Games</item>
+    <item quantity="other">%s Permainan</item>
   </plurals>
-  <string name="addMembers">Add members</string>
+  <string name="addMembers">Tambahkan anggota</string>
   <plurals name="nbMembers">
-    <item quantity="other">%s Members</item>
+    <item quantity="other">%s Anggota</item>
   </plurals>
-  <string name="inviteToTheStudy">Invite to the study</string>
-  <string name="pleaseOnlyInvitePeopleYouKnow">Please only invite people you know, and who actively want to join this study.</string>
-  <string name="searchByUsername">Search by username</string>
-  <string name="spectator">Spectator</string>
-  <string name="contributor">Contributor</string>
-  <string name="kick">Kick</string>
-  <string name="leaveTheStudy">Leave the study</string>
-  <string name="youAreNowAContributor">You are now a contributor</string>
-  <string name="youAreNowASpectator">You are now a spectator</string>
+  <string name="inviteToTheStudy">Ajak untuk studi</string>
+  <string name="pleaseOnlyInvitePeopleYouKnow">Harap hanya mengundang orang yang Anda kenal, dan yang secara aktif ingin bergabung dengan studi ini.</string>
+  <string name="searchByUsername">Cari berdasarkan nama pengguna</string>
+  <string name="spectator">Penonton</string>
+  <string name="contributor">Kontributor</string>
+  <string name="kick">Diusir</string>
+  <string name="leaveTheStudy">Tinggalkan studi</string>
+  <string name="youAreNowAContributor">Sekarang Anda menjadi kontributor</string>
+  <string name="youAreNowASpectator">Sekarang Anda adalah penonton</string>
   <string name="tags">Tags</string>
-  <string name="like">Like</string>
-  <string name="newTag">New tag</string>
-  <string name="commentThisPosition">Comment on this position</string>
-  <string name="commentThisMove">Comment on this move</string>
-  <string name="annotateWithGlyphs">Annotate with glyphs</string>
-  <string name="theChapterIsTooShortToBeAnalysed">The chapter is too short to be analysed.</string>
-  <string name="onlyContributorsCanRequestAnalysis">Only the study contributors can request a computer analysis.</string>
-  <string name="getAFullComputerAnalysis">Get a full server-side computer analysis of the mainline.</string>
-  <string name="makeSureTheChapterIsComplete">Make sure the chapter is complete. You can only request analysis once.</string>
-  <string name="allSyncMembersRemainOnTheSamePosition">All SYNC members remain on the same position</string>
-  <string name="shareChanges">Share changes with spectators and save them on the server</string>
-  <string name="playing">Playing</string>
-  <string name="first">First</string>
-  <string name="previous">Previous</string>
-  <string name="next">Next</string>
-  <string name="last">Last</string>
-  <string name="shareAndExport">Share &amp; export</string>
-  <string name="cloneStudy">Clone</string>
-  <string name="downloadAllGames">Download all games</string>
-  <string name="downloadGame">Download game</string>
+  <string name="like">Suka</string>
+  <string name="newTag">Tagar baru</string>
+  <string name="commentThisPosition">Komentar di posisi ini</string>
+  <string name="commentThisMove">Komentari langkah ini</string>
+  <string name="annotateWithGlyphs">Anotasikan dengan glif</string>
+  <string name="theChapterIsTooShortToBeAnalysed">Bab ini terlalu pendek untuk di analisa.</string>
+  <string name="onlyContributorsCanRequestAnalysis">Hanya kontributor yang dapat meminta analisa komputer.</string>
+  <string name="getAFullComputerAnalysis">Dapatkan analisis komputer penuh di pihak server dari jalur utama.</string>
+  <string name="makeSureTheChapterIsComplete">Pastikan bab ini selesai. Anda hanya dapat meminta analisis satu kali.</string>
+  <string name="allSyncMembersRemainOnTheSamePosition">Semua anggota yang ter-sinkron tetap pada posisi yang sama</string>
+  <string name="shareChanges">Bagikan perubahan dengan penonton dan simpan di server</string>
+  <string name="playing">Memainkan</string>
+  <string name="first">Pertama</string>
+  <string name="previous">Sebelumnya</string>
+  <string name="next">Berikutnya</string>
+  <string name="last">Terakhir</string>
+  <string name="shareAndExport">Bagikan &amp; ekspor</string>
+  <string name="cloneStudy">Gandakan</string>
+  <string name="downloadAllGames">Unduh semua permainan</string>
+  <string name="downloadGame">Unduh permainan</string>
   <string name="studyKif">Study KIF</string>
   <string name="chapterKif">Chapter KIF</string>
   <string name="chapterCsa">Chapter CSA</string>
-  <string name="studyUrl">Study URL</string>
+  <string name="studyUrl">URL studi</string>
   <string name="broadcastUrl">Broadcast URL</string>
-  <string name="currentChapterUrl">Current chapter URL</string>
+  <string name="currentChapterUrl">URL Bab saat ini</string>
   <string name="currentGameUrl">Current game URL</string>
-  <string name="youCanPasteThisInTheForumToEmbed">You can paste this in the forum to embed</string>
-  <string name="startAtInitialPosition">Start at initial position</string>
-  <string name="startAtX">Start at %s</string>
-  <string name="embedInYourWebsite">Embed in your website or blog</string>
-  <string name="readMoreAboutEmbedding">Read more about embedding</string>
-  <string name="onlyPublicStudiesCanBeEmbedded">Only public studies can be embedded!</string>
-  <string name="open">Open</string>
-  <string name="xBroughtToYouByY">%1$s, brought to you by %2$s</string>
-  <string name="studyNotFound">Study not found</string>
-  <string name="editChapter">Edit chapter</string>
-  <string name="newChapter">New chapter</string>
-  <string name="orientation">Orientation</string>
-  <string name="analysisMode">Analysis mode</string>
-  <string name="pinnedChapterComment">Pinned chapter comment</string>
-  <string name="saveChapter">Save chapter</string>
-  <string name="clearAnnotations">Clear annotations</string>
-  <string name="deleteChapter">Delete chapter</string>
-  <string name="deleteThisChapter">Delete this chapter? There is no going back!</string>
-  <string name="clearAllCommentsInThisChapter">Clear all comments, glyphs and drawn shapes in this chapter?</string>
-  <string name="rightUnderTheBoard">Right under the board</string>
-  <string name="noPinnedComment">None</string>
-  <string name="normalAnalysis">Normal analysis</string>
-  <string name="hideNextMoves">Hide next moves</string>
-  <string name="interactiveLesson">Interactive lesson</string>
-  <string name="chapterX">Chapter %s</string>
-  <string name="empty">Empty</string>
-  <string name="startFromInitialPosition">Start from initial position</string>
-  <string name="editor">Editor</string>
-  <string name="startFromCustomPosition">Start from custom position</string>
-  <string name="loadAGameByUrl">Load games by URLs</string>
+  <string name="youCanPasteThisInTheForumToEmbed">Anda dapat menempelkan ini di forum untuk disematkan</string>
+  <string name="startAtInitialPosition">Mulai saat posisi awal</string>
+  <string name="startAtX">Mulai dari %s</string>
+  <string name="embedInYourWebsite">Sematkan di blog atau website Anda</string>
+  <string name="readMoreAboutEmbedding">Baca lebih tentang penyematan</string>
+  <string name="onlyPublicStudiesCanBeEmbedded">Hanya pelajaran publik yang dapat di sematkan!</string>
+  <string name="open">Buka</string>
+  <string name="xBroughtToYouByY">%1$s dibawakan kepadamu dari %2$s</string>
+  <string name="studyNotFound">Studi tidak ditemukan</string>
+  <string name="editChapter">Ubah bab</string>
+  <string name="newChapter">Bab baru</string>
+  <string name="orientation">Orientasi</string>
+  <string name="analysisMode">Mode analisa</string>
+  <string name="pinnedChapterComment">Sematkan komentar bagian bab</string>
+  <string name="saveChapter">Simpan bab</string>
+  <string name="clearAnnotations">Hapus anotasi</string>
+  <string name="deleteChapter">Hapus bab</string>
+  <string name="deleteThisChapter">Hapus bab ini? Ini tidak akan dapat mengulangkan kembali!</string>
+  <string name="clearAllCommentsInThisChapter">Hapus semua komentar dan bentuk di bab ini?</string>
+  <string name="rightUnderTheBoard">Kanan dibawah papan</string>
+  <string name="noPinnedComment">Tidak ada</string>
+  <string name="normalAnalysis">Analisa biasa</string>
+  <string name="hideNextMoves">Sembunyikan langkah selanjutnya</string>
+  <string name="interactiveLesson">Pelajaran interaktif</string>
+  <string name="chapterX">Bab %s</string>
+  <string name="empty">Kosong</string>
+  <string name="startFromInitialPosition">Mulai dari posisi awal</string>
+  <string name="editor">Penyunting</string>
+  <string name="startFromCustomPosition">Mulai dari posisi yang disesuaikan</string>
+  <string name="loadAGameByUrl">Muat permainan dari URL</string>
   <string name="loadAPositionFromSfen">Load a position from SFEN</string>
-  <string name="automatic">Automatic</string>
-  <string name="urlOfTheGame">URL of the games, one per line</string>
-  <string name="loadAGameFromXOrY">Load games from %1$s</string>
-  <string name="createChapter">Create chapter</string>
-  <string name="configureLiveBroadcast">Configure live broadcast</string>
-  <string name="createStudy">Create study</string>
-  <string name="editStudy">Edit study</string>
-  <string name="visibility">Visibility</string>
-  <string name="public">Public</string>
-  <string name="unlisted">Unlisted</string>
-  <string name="inviteOnly">Invite only</string>
-  <string name="allowCloning">Allow cloning</string>
-  <string name="nobody">Nobody</string>
-  <string name="onlyMe">Only me</string>
-  <string name="contributors">Contributors</string>
-  <string name="members">Members</string>
-  <string name="everyone">Everyone</string>
-  <string name="enableSync">Enable sync</string>
-  <string name="yesKeepEveryoneOnTheSamePosition">Yes: keep everyone on the same position</string>
-  <string name="noLetPeopleBrowseFreely">No: let people browse freely</string>
-  <string name="pinnedStudyComment">Pinned study comment</string>
-  <string name="start">Start</string>
-  <string name="save">Save</string>
-  <string name="clearChat">Clear chat</string>
-  <string name="deleteTheStudyChatHistory">Delete the study chat history? There is no going back!</string>
-  <string name="deleteStudy">Delete study</string>
+  <string name="automatic">Otomatis</string>
+  <string name="urlOfTheGame">URL permainan</string>
+  <string name="loadAGameFromXOrY">Muat permainan dari %1$s atau %2$s</string>
+  <string name="createChapter">Buat bab</string>
+  <string name="configureLiveBroadcast">Konfigurasi siaran langsung</string>
+  <string name="createStudy">Buat studi</string>
+  <string name="editStudy">Ubah studi</string>
+  <string name="visibility">Visibilitas</string>
+  <string name="public">Publik</string>
+  <string name="unlisted">Tidak terdaftar</string>
+  <string name="inviteOnly">Hanya yang diundang</string>
+  <string name="allowCloning">Perbolehkan kloning</string>
+  <string name="nobody">Tidak ada seorangpun</string>
+  <string name="onlyMe">Hanya saya</string>
+  <string name="contributors">Kontributor</string>
+  <string name="members">Anggota</string>
+  <string name="everyone">Semua orang</string>
+  <string name="enableSync">Aktifkan sinkronisasi</string>
+  <string name="yesKeepEveryoneOnTheSamePosition">Ya: atur semua orang dalam posisi yang sama</string>
+  <string name="noLetPeopleBrowseFreely">Tidak: Bolehkan untuk menjelajah dengan bebas</string>
+  <string name="pinnedStudyComment">Sematkan komentar studi</string>
+  <string name="start">Mulai</string>
+  <string name="save">Simpan</string>
+  <string name="clearChat">Bersihkan obrolan</string>
+  <string name="deleteTheStudyChatHistory">Hapus riwayat obrolan studi? Ini tidak akan dapat mengulangkan kembali!</string>
+  <string name="deleteStudy">Hapus studi</string>
   <string name="deleteTheEntireStudy">Delete the entire study? There is no going back!</string>
-  <string name="whereDoYouWantToStudyThat">Where do you want to study that?</string>
+  <string name="whereDoYouWantToStudyThat">Dimana Anda ingin mempelajarinya?</string>
 </resources>
