--- a/translation/dest/site/af-ZA.xml
+++ b/translation/dest/site/af-ZA.xml
@@ -29,8 +29,6 @@
 	<string name="uwate" comment="Should be 'Uwate', unless equivalent written differently exists (ex. 上手 in JP; し - ši in CZ instead of shi) - https://en.wikipedia.org/wiki/Handicap_(shogi)">Uwate</string>
 	<string name="randomColor" comment="Side - sente/gote">Lukrake kant</string>
 	<string name="createAGame">Skep \'n spel</string>
-	<string name="whiteIsVictorious">Wit het gewen</string>
-	<string name="blackIsVictorious">Swart het gewen</string>
 	<string name="xIsVictorious" comment="%s - sente(black)/gote(white)">%s het gewen</string>
 	<string name="youPlayAsX" comment="%s - sente(black)/gote(white)">Jy speel met die %s stukke</string>
 	<string name="itsYourTurn">Dit is jou beurt!</string>
@@ -39,8 +37,6 @@
 	<string name="newOpponent">Nuwe opponent</string>
 	<string name="yourOpponentWantsToPlayANewGameWithYou">Jou teenstander wil weer teen jou speel</string>
 	<string name="joinTheGame">Sluit aan by spel</string>
-	<string name="whitePlays">Wit aan die beurt</string>
-	<string name="blackPlays">Swart aan die beurt</string>
 	<string name="xPlays" comment="%s - sente(black)/gote(white)">%s to play</string>
 	<plurals name="opponentLeftCounter">
 		<item quantity="one">Jou opponent het die spel verlaat. Jy kan die oorwinning in %s sekonde eis.</item>
@@ -52,11 +48,7 @@
 	<string name="forceDraw">Eis \'n gelykop</string>
 	<string name="talkInChat">Wees asseblief vriendelik!</string>
 	<string name="theFirstPersonToComeOnThisUrlWillPlayWithYou">Die eerste persoon wat dié skakel volg, speel teen jou.</string>
-	<string name="whiteResigned">Wit gee oor</string>
-	<string name="blackResigned">Swart gee oor</string>
 	<string name="xResigned" comment="%s - sente(black)/gote(white)">%s resigned</string>
-	<string name="whiteLeftTheGame">Wit het die spel verlaat</string>
-	<string name="blackLeftTheGame">Swart het die spel verlaat</string>
 	<string name="xLeftTheGame" comment="%s - sente(black)/gote(white)">%s het die spel verlaat</string>
 	<string name="xDidntMove" comment="%s - sente(black)/gote(white)">%s didn\'t move</string>
 	<string name="shareThisUrlToLetSpectatorsSeeTheGame">Deel die URL vir toeskouers</string>
@@ -79,7 +71,7 @@
 	<string name="deleteFromHere">Verwyder hiervandaan</string>
 	<string name="forceVariation">Forseer variasie</string>
 	<string name="move">Skuif</string>
-	<plurals name="moves">
+	<plurals name="nbMoves">
 		<item quantity="one">%s move</item>
 		<item quantity="other">%s moves</item>
 	</plurals>
@@ -208,11 +200,7 @@
 	<string name="drawOfferDeclined">Gelykop aanbod verwerp</string>
 	<string name="drawOfferAccepted">Gelykop aanbod aanvaar</string>
 	<string name="drawOfferCanceled">Gelykop aanbod gekanselleer</string>
-	<string name="whiteOffersDraw">Wit maak gelykspel aanbod</string>
-	<string name="blackOffersDraw">Swart maak gelykspel aanbod</string>
 	<string name="xOffersDraw" comment="%s - sente(black)/gote(white)">%s maak gelykspel aanbod</string>
-	<string name="whiteDeclinesDraw">Wit wys gelykspel aanbod van die hand</string>
-	<string name="blackDeclinesDraw">Swart wys gelykspel aanbod van die hand</string>
 	<string name="xDeclinesDraw" comment="%s - sente(black)/gote(white)">%s wys gelykspel aanbod van die hand</string>
 	<string name="yourOpponentOffersADraw">Jou teenstander bied gelykop aan</string>
 	<string name="accept">Aanvaar</string>
@@ -366,8 +354,6 @@ computer analysis, game chat and shareable URL.</string>
 	<string name="clickOnTheBoardToMakeYourMove">Kliek op die bord om jou skuif te maak, en te bewys jy is \'n mens.</string>
 	<string name="captcha.fail">Please solve the shogi captcha.</string>
 	<string name="notACheckmate">Nie skaakmat nie</string>
-	<string name="whiteCheckmatesInOneMove">Wit om te skaakmat in een skuif</string>
-	<string name="blackCheckmatesInOneMove">Swart om te skaakmat in een skuif</string>
 	<string name="xCheckmatesInOneMove" comment="%s - sente(black)/gote(white)">%s om te skaakmat in een skuif</string>
 	<string name="retry">Probeer weer</string>
 	<string name="reconnecting">Konnekteer weer</string>
@@ -438,8 +424,6 @@ computer analysis, game chat and shareable URL.</string>
 	<string name="performance">Prestasie plasing</string>
 	<string name="tournamentComplete">Toernooi afgehandel</string>
 	<string name="movesPlayed">Skuiwe gespeel</string>
-	<string name="whiteWins">Gewen deur wit</string>
-	<string name="blackWins">Gewen deur swart</string>
 	<string name="xWins" comment="Stats in tournament (ex. Sente wins: 51%)">%s gewen</string>
 	<string name="draws">Gelykop gespeel</string>
 	<string name="nextXTournament">Volgende %s toernooi:</string>
@@ -811,8 +795,6 @@ Jou verslag sal vinniger geantwoord word as dit in Engels geskryf is.</string>
 	<string name="hideBestMove">Versteek die beste skuif</string>
 	<string name="getAHint">Kry \'n leidraad</string>
 	<string name="evaluatingYourMove">Jou skuif word geëvalueer ...</string>
-	<string name="whiteWinsGame">Wit wen</string>
-	<string name="blackWinsGame">Swart wen</string>
 	<string name="xWinsGame" comment="%s - sente(black)/gote(white)">%s gewen</string>
 	<string name="learnFromYourMistakes">Leer uit jou foute</string>
 	<string name="learnFromThisMistake">Leer uit hierdie fout</string>
