--- a/translation/dest/site/da-DK.xml
+++ b/translation/dest/site/da-DK.xml
@@ -29,8 +29,6 @@
 	<string name="uwate" comment="Should be 'Uwate', unless equivalent written differently exists (ex. 上手 in JP; し - ši in CZ instead of shi) - https://en.wikipedia.org/wiki/Handicap_(shogi)">Uwate</string>
 	<string name="randomColor" comment="Side - sente/gote">Tilfældig farve</string>
 	<string name="createAGame">Start et parti</string>
-	<string name="whiteIsVictorious">Hvid har vundet</string>
-	<string name="blackIsVictorious">Sort har vundet</string>
 	<string name="xIsVictorious" comment="%s - sente(black)/gote(white)">%s is victorious</string>
 	<string name="youPlayAsX" comment="%s - sente(black)/gote(white)">You play as %s</string>
 	<string name="itsYourTurn">Det er din tur!</string>
@@ -39,8 +37,6 @@
 	<string name="newOpponent">Ny modstander</string>
 	<string name="yourOpponentWantsToPlayANewGameWithYou">Din modstander vil gerne spille et nyt spil</string>
 	<string name="joinTheGame">Start spillet</string>
-	<string name="whitePlays">Hvid i trækket</string>
-	<string name="blackPlays">Sort til at spille</string>
 	<string name="xPlays" comment="%s - sente(black)/gote(white)">%s to play</string>
 	<plurals name="opponentLeftCounter">
 		<item quantity="one">Din modstander har forladt spillet. Du kan kræve sejr om %s sekund.</item>
@@ -52,11 +48,7 @@
 	<string name="forceDraw">Fremtving remis</string>
 	<string name="talkInChat">Hold en venlig tone i chatten!</string>
 	<string name="theFirstPersonToComeOnThisUrlWillPlayWithYou">Den første person der bruger denne URL, vil blive din modstander</string>
-	<string name="whiteResigned">Hvid har givet op</string>
-	<string name="blackResigned">Sort har givet op</string>
 	<string name="xResigned" comment="%s - sente(black)/gote(white)">%s resigned</string>
-	<string name="whiteLeftTheGame">Hvid har forladt partiet</string>
-	<string name="blackLeftTheGame">Sort har forladt partiet</string>
 	<string name="xLeftTheGame" comment="%s - sente(black)/gote(white)">%s left the game</string>
 	<string name="xDidntMove" comment="%s - sente(black)/gote(white)">%s didn\'t move</string>
 	<string name="shareThisUrlToLetSpectatorsSeeTheGame">Del denne URL for at lade tilskuere se partiet</string>
@@ -79,7 +71,7 @@
 	<string name="deleteFromHere">Slet herfra</string>
 	<string name="forceVariation">Fremtving variant</string>
 	<string name="move">Træk</string>
-	<plurals name="moves">
+	<plurals name="nbMoves">
 		<item quantity="one">%s move</item>
 		<item quantity="other">%s moves</item>
 	</plurals>
@@ -208,11 +200,7 @@
 	<string name="drawOfferDeclined">Remistilbud afslået</string>
 	<string name="drawOfferAccepted">Remistilbud accepteret</string>
 	<string name="drawOfferCanceled">Remistilbud trukket tilbage</string>
-	<string name="whiteOffersDraw">Hvid tilbyder remis</string>
-	<string name="blackOffersDraw">Sort tilbyder remis</string>
 	<string name="xOffersDraw" comment="%s - sente(black)/gote(white)">%s offers draw</string>
-	<string name="whiteDeclinesDraw">Hvid afslår remis</string>
-	<string name="blackDeclinesDraw">Sort afslår remis</string>
 	<string name="xDeclinesDraw" comment="%s - sente(black)/gote(white)">%s declines draw</string>
 	<string name="yourOpponentOffersADraw">Din modstander tilbyder remis</string>
 	<string name="accept">Accepter</string>
@@ -366,8 +354,6 @@ computer analysis, game chat and shareable URL.</string>
 	<string name="clickOnTheBoardToMakeYourMove">Klik på brættet for at foretage dit træk, og bevis at du ikke er en robot.</string>
 	<string name="captcha.fail">Please solve the shogi captcha.</string>
 	<string name="notACheckmate">Ikke en mat</string>
-	<string name="whiteCheckmatesInOneMove">Hvid sætter mat i ét træk</string>
-	<string name="blackCheckmatesInOneMove">Sort sætter mat i ét træk</string>
 	<string name="xCheckmatesInOneMove" comment="%s - sente(black)/gote(white)">%s to checkmate in one move</string>
 	<string name="retry">Prøv igen</string>
 	<string name="reconnecting">Genopretter forbindelsen</string>
@@ -438,8 +424,6 @@ computer analysis, game chat and shareable URL.</string>
 	<string name="performance">Præstation</string>
 	<string name="tournamentComplete">Turnering afsluttet</string>
 	<string name="movesPlayed">Spillede træk</string>
-	<string name="whiteWins">Hvid vinder</string>
-	<string name="blackWins">Sort vinder</string>
 	<string name="xWins" comment="Stats in tournament (ex. Sente wins: 51%)">%s wins</string>
 	<string name="draws">Remis</string>
 	<string name="nextXTournament">Næste %s turnering:</string>
@@ -810,8 +794,6 @@ computer analysis, game chat and shareable URL.</string>
 	<string name="hideBestMove">Skjul bedste træk</string>
 	<string name="getAHint">Få et hint</string>
 	<string name="evaluatingYourMove">Vurderer dit træk ...</string>
-	<string name="whiteWinsGame">Hvid vinder</string>
-	<string name="blackWinsGame">Sort vinder</string>
 	<string name="xWinsGame" comment="%s - sente(black)/gote(white)">%s wins</string>
 	<string name="learnFromYourMistakes">Lær af dine fejl</string>
 	<string name="learnFromThisMistake">Lær af denne fejl</string>
