--- a/translation/dest/site/de-DE.xml
+++ b/translation/dest/site/de-DE.xml
@@ -29,8 +29,6 @@
 	<string name="uwate" comment="Should be 'Uwate', unless equivalent written differently exists (ex. 上手 in JP; し - ši in CZ instead of shi) - https://en.wikipedia.org/wiki/Handicap_(shogi)">Uwate</string>
 	<string name="randomColor" comment="Side - sente/gote">Zufällige Farbe</string>
 	<string name="createAGame">Neue Partie</string>
-	<string name="whiteIsVictorious">Weiß gewinnt</string>
-	<string name="blackIsVictorious">Schwarz gewinnt</string>
 	<string name="xIsVictorious" comment="%s - sente(black)/gote(white)">%s gewinnt</string>
 	<string name="youPlayAsX" comment="%s - sente(black)/gote(white)">Du spielst als %s</string>
 	<string name="itsYourTurn">Du bist am Zug!</string>
@@ -39,8 +37,6 @@
 	<string name="newOpponent">Neuer Gegner</string>
 	<string name="yourOpponentWantsToPlayANewGameWithYou">Dein Gegner möchte ein neues Spiel mit dir spielen</string>
 	<string name="joinTheGame">Der Partie beitreten</string>
-	<string name="whitePlays">Weiß am Zug</string>
-	<string name="blackPlays">Schwarz am Zug</string>
 	<string name="xPlays" comment="%s - sente(black)/gote(white)">%s to play</string>
 	<plurals name="opponentLeftCounter">
 		<item quantity="one">Dein Gegner hat die Partie verlassen. Du kannst in %s Sekunde den Sieg beanspruchen.</item>
@@ -52,11 +48,7 @@
 	<string name="forceDraw">Remis erklären</string>
 	<string name="talkInChat">Bitte sei freundlich im Chat!</string>
 	<string name="theFirstPersonToComeOnThisUrlWillPlayWithYou">Die erste Person, die diese URL aufruft, wird dein Gegner.</string>
-	<string name="whiteResigned">Weiß hat aufgegeben</string>
-	<string name="blackResigned">Schwarz hat aufgegeben</string>
 	<string name="xResigned" comment="%s - sente(black)/gote(white)">%s resigned</string>
-	<string name="whiteLeftTheGame">Weiß hat die Partie verlassen</string>
-	<string name="blackLeftTheGame">Schwarz hat die Partie verlassen</string>
 	<string name="xLeftTheGame" comment="%s - sente(black)/gote(white)">%s left the game</string>
 	<string name="xDidntMove" comment="%s - sente(black)/gote(white)">%s didn\'t move</string>
 	<string name="shareThisUrlToLetSpectatorsSeeTheGame">Teile diese URL, um Zuschauer einzuladen</string>
@@ -79,7 +71,7 @@
 	<string name="deleteFromHere">Ab hier löschen</string>
 	<string name="forceVariation">Variante erzwingen</string>
 	<string name="move">Zug</string>
-	<plurals name="moves">
+	<plurals name="nbMoves">
 		<item quantity="one">%s move</item>
 		<item quantity="other">%s moves</item>
 	</plurals>
@@ -208,11 +200,7 @@
 	<string name="drawOfferDeclined">Remisangebot abgelehnt</string>
 	<string name="drawOfferAccepted">Remisangebot angenommen</string>
 	<string name="drawOfferCanceled">Remisangebot zurückgezogen</string>
-	<string name="whiteOffersDraw">Weiß bietet Remis</string>
-	<string name="blackOffersDraw">Schwarz bietet Remis</string>
 	<string name="xOffersDraw" comment="%s - sente(black)/gote(white)">%s offers draw</string>
-	<string name="whiteDeclinesDraw">Weiß lehnt Remis ab</string>
-	<string name="blackDeclinesDraw">Schwarz lehnt Remis ab</string>
 	<string name="xDeclinesDraw" comment="%s - sente(black)/gote(white)">%s declines draw</string>
 	<string name="yourOpponentOffersADraw">Dein Gegner bietet Remis an</string>
 	<string name="accept">Annehmen</string>
@@ -366,8 +354,6 @@ computer analysis, game chat and shareable URL.</string>
 	<string name="clickOnTheBoardToMakeYourMove">Mach einen Zug, um zu beweisen, dass du ein Mensch bist.</string>
 	<string name="captcha.fail">Bitte löse die Shogi-Aufgabe.</string>
 	<string name="notACheckmate">Kein Matt</string>
-	<string name="whiteCheckmatesInOneMove">Weiß setzt in einem Zug Matt</string>
-	<string name="blackCheckmatesInOneMove">Schwarz setzt in einem Zug Matt</string>
 	<string name="xCheckmatesInOneMove" comment="%s - sente(black)/gote(white)">%s to checkmate in one move</string>
 	<string name="retry">Erneut versuchen</string>
 	<string name="reconnecting">Wiederverbinden</string>
@@ -438,8 +424,6 @@ computer analysis, game chat and shareable URL.</string>
 	<string name="performance">Turnierleistung</string>
 	<string name="tournamentComplete">Turnier beendet</string>
 	<string name="movesPlayed">Gespielte Züge</string>
-	<string name="whiteWins">Weiße Siege</string>
-	<string name="blackWins">Schwarze Siege</string>
 	<string name="xWins" comment="Stats in tournament (ex. Sente wins: 51%)">%s wins</string>
 	<string name="draws">Remisen</string>
 	<string name="nextXTournament">Nächstes %s Turnier:</string>
@@ -810,8 +794,6 @@ computer analysis, game chat and shareable URL.</string>
 	<string name="hideBestMove">Den besten Zug ausblenden</string>
 	<string name="getAHint">Hinweis anzeigen</string>
 	<string name="evaluatingYourMove">Zug wird bewertet ...</string>
-	<string name="whiteWinsGame">Weiß gewinnt</string>
-	<string name="blackWinsGame">Schwarz gewinnt</string>
 	<string name="xWinsGame" comment="%s - sente(black)/gote(white)">%s wins</string>
 	<string name="learnFromYourMistakes">Lerne aus deinen Fehlern</string>
 	<string name="learnFromThisMistake">Lerne aus diesem Fehler</string>
