--- a/translation/dest/site/el-GR.xml
+++ b/translation/dest/site/el-GR.xml
@@ -29,8 +29,6 @@
 	<string name="uwate" comment="Should be 'Uwate', unless equivalent written differently exists (ex. 上手 in JP; し - ši in CZ instead of shi) - https://en.wikipedia.org/wiki/Handicap_(shogi)">Uwate</string>
 	<string name="randomColor" comment="Side - sente/gote">Τυχαίο χρώμα</string>
 	<string name="createAGame">Δημιουργήστε παιχνίδι</string>
-	<string name="whiteIsVictorious">Τα λευκά νίκησαν</string>
-	<string name="blackIsVictorious">Τα μαύρα νίκησαν</string>
 	<string name="xIsVictorious" comment="%s - sente(black)/gote(white)">%s is victorious</string>
 	<string name="youPlayAsX" comment="%s - sente(black)/gote(white)">You play as %s</string>
 	<string name="itsYourTurn">Είναι η σειρά σας!</string>
@@ -39,8 +37,6 @@
 	<string name="newOpponent">Νέος αντίπαλος</string>
 	<string name="yourOpponentWantsToPlayANewGameWithYou">Ο αντίπαλος θέλει να παίξει νέο παιχνίδι μαζί σας</string>
 	<string name="joinTheGame">Λάβετε μέρος στο παιχνίδι</string>
-	<string name="whitePlays">Παίζουν τα λευκά</string>
-	<string name="blackPlays">Παίζουν τα μαύρα</string>
 	<string name="xPlays" comment="%s - sente(black)/gote(white)">%s to play</string>
 	<plurals name="opponentLeftCounter">
 		<item quantity="one">Ο αντίπαλος έφυγε. Διεκδίκηση νίκης σε %s δευτερόλεπτο.</item>
@@ -52,11 +48,7 @@
 	<string name="forceDraw">Δηλώστε ισοπαλία</string>
 	<string name="talkInChat">Παρακαλούμε να είστε ευγενικοί στη συνομιλία!</string>
 	<string name="theFirstPersonToComeOnThisUrlWillPlayWithYou">Ο πρώτος που θα επισκεφθεί αυτήν τη διεύθυνση θα παίξει μαζί σας.</string>
-	<string name="whiteResigned">Τα λευκά παραιτήθηκαν</string>
-	<string name="blackResigned">Τα μαύρα παραιτήθηκαν</string>
 	<string name="xResigned" comment="%s - sente(black)/gote(white)">%s resigned</string>
-	<string name="whiteLeftTheGame">Τα λευκά έφυγαν από το παιχνίδι</string>
-	<string name="blackLeftTheGame">Τα μαύρα έφυγαν από το παιχνίδι</string>
 	<string name="xLeftTheGame" comment="%s - sente(black)/gote(white)">%s left the game</string>
 	<string name="xDidntMove" comment="%s - sente(black)/gote(white)">%s didn\'t move</string>
 	<string name="shareThisUrlToLetSpectatorsSeeTheGame">Στείλτε αυτήν τη διεύθυνση για να επιτρέψετε σε θεατές να δουν το παιχνίδι</string>
@@ -79,7 +71,7 @@
 	<string name="deleteFromHere">Διαγραφή από εδώ</string>
 	<string name="forceVariation">Θέσε σε βαριάντα</string>
 	<string name="move">Κίνηση</string>
-	<plurals name="moves">
+	<plurals name="nbMoves">
 		<item quantity="one">%s move</item>
 		<item quantity="other">%s moves</item>
 	</plurals>
@@ -208,11 +200,7 @@
 	<string name="drawOfferDeclined">Πρόταση ισοπαλίας μη αποδεκτή</string>
 	<string name="drawOfferAccepted">Πρόταση ισοπαλίας αποδεκτή</string>
 	<string name="drawOfferCanceled">Πρόταση ισοπαλίας ακυρώθηκε</string>
-	<string name="whiteOffersDraw">Τα λευκά προσφέρουν ισοπαλία</string>
-	<string name="blackOffersDraw">Τα μαύρα προσφέρουν ισοπαλία</string>
 	<string name="xOffersDraw" comment="%s - sente(black)/gote(white)">%s offers draw</string>
-	<string name="whiteDeclinesDraw">Τα λευκά απορρίπτουν την ισοπαλία</string>
-	<string name="blackDeclinesDraw">Τα μαύρα απορρίπτουν την ισοπαλία</string>
 	<string name="xDeclinesDraw" comment="%s - sente(black)/gote(white)">%s declines draw</string>
 	<string name="yourOpponentOffersADraw">Ο αντίπαλος σας προτείνει ισοπαλία</string>
 	<string name="accept">Αποδοχή</string>
@@ -366,8 +354,6 @@ computer analysis, game chat and shareable URL.</string>
 	<string name="clickOnTheBoardToMakeYourMove">Κάνετε κλικ στη σκακιέρα για να κινήσετε τα πιόνια και να αποδείξετε πως είστε άνθρωπος.</string>
 	<string name="captcha.fail">Please solve the shogi captcha.</string>
 	<string name="notACheckmate">Δεν είναι ματ</string>
-	<string name="whiteCheckmatesInOneMove">Παίζουν τα λευκά, κάντε ματ με μια κίνηση</string>
-	<string name="blackCheckmatesInOneMove">Παίζουν τα μαύρα, κάντε ματ με μια κίνηση</string>
 	<string name="xCheckmatesInOneMove" comment="%s - sente(black)/gote(white)">%s to checkmate in one move</string>
 	<string name="retry">Επανάληψη</string>
 	<string name="reconnecting">Επανασύνδεση</string>
@@ -438,8 +424,6 @@ computer analysis, game chat and shareable URL.</string>
 	<string name="performance">Επίδοση</string>
 	<string name="tournamentComplete">Το πρωτάθλημα ολοκληρώθηκε</string>
 	<string name="movesPlayed">Παιγμένες κινήσεις</string>
-	<string name="whiteWins">Τα άσπρα νικούν</string>
-	<string name="blackWins">Τα μαύρα νικούν</string>
 	<string name="xWins" comment="Stats in tournament (ex. Sente wins: 51%)">%s wins</string>
 	<string name="draws">Ισοπαλίες</string>
 	<string name="nextXTournament">Επόμενο %s πρωτάθλημα:</string>
@@ -810,8 +794,6 @@ computer analysis, game chat and shareable URL.</string>
 	<string name="hideBestMove">Απόκρυψη καλύτερης κίνησης</string>
 	<string name="getAHint">Λάβετε μια υπόδειξη</string>
 	<string name="evaluatingYourMove">Αξιολογώντας την κίνηση σας...</string>
-	<string name="whiteWinsGame">Κερδίζουν τα λευκά</string>
-	<string name="blackWinsGame">Κερδίζουν τα μαύρα</string>
 	<string name="xWinsGame" comment="%s - sente(black)/gote(white)">%s wins</string>
 	<string name="learnFromYourMistakes">Μάθετε από τα λάθη σας</string>
 	<string name="learnFromThisMistake">Μάθετε από αυτό το λάθος</string>
