--- a/translation/dest/site/es-ES.xml
+++ b/translation/dest/site/es-ES.xml
@@ -29,8 +29,6 @@
 	<string name="uwate" comment="Should be 'Uwate', unless equivalent written differently exists (ex. 上手 in JP; し - ši in CZ instead of shi) - https://en.wikipedia.org/wiki/Handicap_(shogi)">Uwate</string>
 	<string name="randomColor" comment="Side - sente/gote">Color aleatorio</string>
 	<string name="createAGame">Crear una partida</string>
-	<string name="whiteIsVictorious">Las blancas ganan</string>
-	<string name="blackIsVictorious">Las negras ganan</string>
 	<string name="xIsVictorious" comment="%s - sente(black)/gote(white)">%s is victorious</string>
 	<string name="youPlayAsX" comment="%s - sente(black)/gote(white)">You play as %s</string>
 	<string name="itsYourTurn">¡Es tu turno!</string>
@@ -39,8 +37,6 @@
 	<string name="newOpponent">Nuevo oponente</string>
 	<string name="yourOpponentWantsToPlayANewGameWithYou">Tu oponente quiere la revancha</string>
 	<string name="joinTheGame">Unirse a la partida</string>
-	<string name="whitePlays">Juegan las blancas</string>
-	<string name="blackPlays">Juegan las negras</string>
 	<string name="xPlays" comment="%s - sente(black)/gote(white)">%s to play</string>
 	<plurals name="opponentLeftCounter">
 		<item quantity="one">Tu oponente ha salido de la partida. Podrás reclamar la victoria en %s segundo.</item>
@@ -52,11 +48,7 @@
 	<string name="forceDraw">Declarar tablas</string>
 	<string name="talkInChat">Por favor, sé amable en el chat</string>
 	<string name="theFirstPersonToComeOnThisUrlWillPlayWithYou">La primera persona que entre en este enlace jugará contigo.</string>
-	<string name="whiteResigned">Las blancas abandonaron</string>
-	<string name="blackResigned">Las negras abandonaron</string>
 	<string name="xResigned" comment="%s - sente(black)/gote(white)">%s resigned</string>
-	<string name="whiteLeftTheGame">Las blancas han abandonado la partida</string>
-	<string name="blackLeftTheGame">Las negras han abandonado la partida</string>
 	<string name="xLeftTheGame" comment="%s - sente(black)/gote(white)">%s left the game</string>
 	<string name="xDidntMove" comment="%s - sente(black)/gote(white)">%s didn\'t move</string>
 	<string name="shareThisUrlToLetSpectatorsSeeTheGame">Comparte este enlace para invitar espectadores a ver la partida</string>
@@ -79,7 +71,7 @@
 	<string name="deleteFromHere">Borrar a partir de aquí</string>
 	<string name="forceVariation">Convertir en variante</string>
 	<string name="move">Movimiento</string>
-	<plurals name="moves">
+	<plurals name="nbMoves">
 		<item quantity="one">%s move</item>
 		<item quantity="other">%s moves</item>
 	</plurals>
@@ -208,11 +200,7 @@
 	<string name="drawOfferDeclined">Oferta de tablas rechazada</string>
 	<string name="drawOfferAccepted">Oferta de tablas aceptada</string>
 	<string name="drawOfferCanceled">Oferta de tablas cancelada</string>
-	<string name="whiteOffersDraw">Gote ofrecen tablas</string>
-	<string name="blackOffersDraw">Sente ofrecen tablas</string>
 	<string name="xOffersDraw" comment="%s - sente(black)/gote(white)">%s offers draw</string>
-	<string name="whiteDeclinesDraw">Las blancas rechazan tablas</string>
-	<string name="blackDeclinesDraw">Las negras rechazan tablas</string>
 	<string name="xDeclinesDraw" comment="%s - sente(black)/gote(white)">%s declines draw</string>
 	<string name="yourOpponentOffersADraw">Tu oponente ofrece tablas</string>
 	<string name="accept">Aceptar</string>
@@ -365,8 +353,6 @@
 	<string name="clickOnTheBoardToMakeYourMove">Haz clic en el tablero para hacer tu jugada y demostrar que eres humano.</string>
 	<string name="captcha.fail">Por favor, resuelva el captcha de shogi.</string>
 	<string name="notACheckmate">No es jaque mate</string>
-	<string name="whiteCheckmatesInOneMove">Juegan blancas y dan mate en una</string>
-	<string name="blackCheckmatesInOneMove">Juegan negras y dan mate en una</string>
 	<string name="xCheckmatesInOneMove" comment="%s - sente(black)/gote(white)">%s to checkmate in one move</string>
 	<string name="retry">Reintentar</string>
 	<string name="reconnecting">Reconectando</string>
@@ -437,8 +423,6 @@
 	<string name="performance">Actuación</string>
 	<string name="tournamentComplete">Torneo terminado</string>
 	<string name="movesPlayed">Movimientos</string>
-	<string name="whiteWins">Victorias blancas</string>
-	<string name="blackWins">Victorias negras</string>
 	<string name="xWins" comment="Stats in tournament (ex. Sente wins: 51%)">%s wins</string>
 	<string name="draws">Tablas</string>
 	<string name="nextXTournament">Siguiente torneo %s:</string>
@@ -809,8 +793,6 @@
 	<string name="hideBestMove">Ocultar el mejor movimiento</string>
 	<string name="getAHint">Pedir una pista</string>
 	<string name="evaluatingYourMove">Evaluando tu movimiento ...</string>
-	<string name="whiteWinsGame">Ganan las blancas</string>
-	<string name="blackWinsGame">Ganan las negras</string>
 	<string name="xWinsGame" comment="%s - sente(black)/gote(white)">%s wins</string>
 	<string name="learnFromYourMistakes">Aprende de tus errores</string>
 	<string name="learnFromThisMistake">Aprende de este error</string>
