--- a/translation/dest/site/hu-HU.xml
+++ b/translation/dest/site/hu-HU.xml
@@ -29,8 +29,6 @@
 	<string name="uwate" comment="Should be 'Uwate', unless equivalent written differently exists (ex. 上手 in JP; し - ši in CZ instead of shi) - https://en.wikipedia.org/wiki/Handicap_(shogi)">Uwate</string>
 	<string name="randomColor" comment="Side - sente/gote">Véletlen szín</string>
 	<string name="createAGame">Játék létrehozása</string>
-	<string name="whiteIsVictorious">Világos nyert</string>
-	<string name="blackIsVictorious">Sötét nyert</string>
 	<string name="xIsVictorious" comment="%s - sente(black)/gote(white)">%s is victorious</string>
 	<string name="youPlayAsX" comment="%s - sente(black)/gote(white)">You play as %s</string>
 	<string name="itsYourTurn">Te következel</string>
@@ -39,8 +37,6 @@
 	<string name="newOpponent">Új ellenfél</string>
 	<string name="yourOpponentWantsToPlayANewGameWithYou">Az ellenfeled visszavágót szeretne</string>
 	<string name="joinTheGame">Csatlakozás a játékhoz</string>
-	<string name="whitePlays">Világos lép</string>
-	<string name="blackPlays">Sötét lép</string>
 	<string name="xPlays" comment="%s - sente(black)/gote(white)">%s to play</string>
 	<plurals name="opponentLeftCounter">
 		<item quantity="one">Az ellenfél elhagyta a játékot, %s másodperc múlva tied a győzelem.</item>
@@ -52,11 +48,7 @@
 	<string name="forceDraw">Döntetlen</string>
 	<string name="talkInChat">Légy udvarias másokkal!</string>
 	<string name="theFirstPersonToComeOnThisUrlWillPlayWithYou">Az első ember, aki felkeresi ezt a címet, az lesz az ellenfeled.</string>
-	<string name="whiteResigned">Világos feladta</string>
-	<string name="blackResigned">Sötét feladta</string>
 	<string name="xResigned" comment="%s - sente(black)/gote(white)">%s resigned</string>
-	<string name="whiteLeftTheGame">Világos elhagyta a játékot</string>
-	<string name="blackLeftTheGame">Sötét elhagyta a játékot</string>
 	<string name="xLeftTheGame" comment="%s - sente(black)/gote(white)">%s left the game</string>
 	<string name="xDidntMove" comment="%s - sente(black)/gote(white)">%s didn\'t move</string>
 	<string name="shareThisUrlToLetSpectatorsSeeTheGame">Oszd meg ezt az linket, hogy mások nézhessék a játszmát</string>
@@ -79,7 +71,7 @@
 	<string name="deleteFromHere">Törlés innentől</string>
 	<string name="forceVariation">Mentés változatként</string>
 	<string name="move">Lépés</string>
-	<plurals name="moves">
+	<plurals name="nbMoves">
 		<item quantity="one">%s move</item>
 		<item quantity="other">%s moves</item>
 	</plurals>
@@ -208,11 +200,7 @@
 	<string name="drawOfferDeclined">Döntetlen felajánlás elutasítva</string>
 	<string name="drawOfferAccepted">Döntetlen elfogadva</string>
 	<string name="drawOfferCanceled">Döntetlen ajánlás elvetve</string>
-	<string name="whiteOffersDraw">Világos döntetlent ajánl</string>
-	<string name="blackOffersDraw">Sötét döntetlent ajánl</string>
 	<string name="xOffersDraw" comment="%s - sente(black)/gote(white)">%s offers draw</string>
-	<string name="whiteDeclinesDraw">Világos elutasította a döntetlen ajánlatot</string>
-	<string name="blackDeclinesDraw">Sötét elutasította a döntetlen ajánlatot</string>
 	<string name="xDeclinesDraw" comment="%s - sente(black)/gote(white)">%s declines draw</string>
 	<string name="yourOpponentOffersADraw">Az ellenfeled döntetlent ajánl</string>
 	<string name="accept">Elfogad</string>
@@ -366,8 +354,6 @@ computer analysis, game chat and shareable URL.</string>
 	<string name="clickOnTheBoardToMakeYourMove">Kattints a táblára és lépj - innen tudjuk, hogy ember vagy.</string>
 	<string name="captcha.fail">Please solve the shogi captcha.</string>
 	<string name="notACheckmate">Ez nem matt</string>
-	<string name="whiteCheckmatesInOneMove">Fehér következő lépésben mattot ad</string>
-	<string name="blackCheckmatesInOneMove">Fekete a következő lépésben mattot ad</string>
 	<string name="xCheckmatesInOneMove" comment="%s - sente(black)/gote(white)">%s to checkmate in one move</string>
 	<string name="retry">Újra</string>
 	<string name="reconnecting">Újrakapcsolódás</string>
@@ -438,8 +424,6 @@ computer analysis, game chat and shareable URL.</string>
 	<string name="performance">Teljesítmény</string>
 	<string name="tournamentComplete">Verseny összefoglaló</string>
 	<string name="movesPlayed">Lépések száma</string>
-	<string name="whiteWins">Világos győzelmek</string>
-	<string name="blackWins">Sötét győzelmek</string>
 	<string name="xWins" comment="Stats in tournament (ex. Sente wins: 51%)">%s wins</string>
 	<string name="draws">Döntetlenek</string>
 	<string name="nextXTournament">Következő %s verseny:</string>
@@ -810,8 +794,6 @@ computer analysis, game chat and shareable URL.</string>
 	<string name="hideBestMove">A legjobb lépés elrejtése</string>
 	<string name="getAHint">Tipp kérése</string>
 	<string name="evaluatingYourMove">Lépés értékelése ...</string>
-	<string name="whiteWinsGame">Világos nyert</string>
-	<string name="blackWinsGame">Sötét nyert</string>
 	<string name="xWinsGame" comment="%s - sente(black)/gote(white)">%s wins</string>
 	<string name="learnFromYourMistakes">Tanulj a hibáidból</string>
 	<string name="learnFromThisMistake">Tanulok a hibámból</string>
