--- a/translation/dest/site/it-IT.xml
+++ b/translation/dest/site/it-IT.xml
@@ -29,8 +29,6 @@
 	<string name="uwate" comment="Should be 'Uwate', unless equivalent written differently exists (ex. 上手 in JP; し - ši in CZ instead of shi) - https://en.wikipedia.org/wiki/Handicap_(shogi)">Uwate</string>
 	<string name="randomColor" comment="Side - sente/gote">Colore casuale</string>
 	<string name="createAGame">Crea una partita</string>
-	<string name="whiteIsVictorious">Vince il Bianco</string>
-	<string name="blackIsVictorious">Vince il Nero</string>
 	<string name="xIsVictorious" comment="%s - sente(black)/gote(white)">%s is victorious</string>
 	<string name="youPlayAsX" comment="%s - sente(black)/gote(white)">You play as %s</string>
 	<string name="itsYourTurn">Tocca a te!</string>
@@ -39,8 +37,6 @@
 	<string name="newOpponent">Nuovo avversario</string>
 	<string name="yourOpponentWantsToPlayANewGameWithYou">Il tuo avversario vuole giocare un\'altra partita con te</string>
 	<string name="joinTheGame">Unisciti alla partita</string>
-	<string name="whitePlays">Tocca al Bianco</string>
-	<string name="blackPlays">Tocca al Nero</string>
 	<string name="xPlays" comment="%s - sente(black)/gote(white)">%s to play</string>
 	<plurals name="opponentLeftCounter">
 		<item quantity="one">Il tuo avversario ha lasciato la partita. Puoi reclamare la vittoria fra %s secondo.</item>
@@ -52,11 +48,7 @@
 	<string name="forceDraw">Stabilisci la patta</string>
 	<string name="talkInChat">Sii educato in chat!</string>
 	<string name="theFirstPersonToComeOnThisUrlWillPlayWithYou">La prima persona che si presenta a questo URL giocherà con te.</string>
-	<string name="whiteResigned">Il Bianco ha abbandonato</string>
-	<string name="blackResigned">Il Nero ha abbandonato</string>
 	<string name="xResigned" comment="%s - sente(black)/gote(white)">%s resigned</string>
-	<string name="whiteLeftTheGame">Il Bianco ha lasciato la partita</string>
-	<string name="blackLeftTheGame">Il Nero ha lasciato la partita</string>
 	<string name="xLeftTheGame" comment="%s - sente(black)/gote(white)">%s left the game</string>
 	<string name="xDidntMove" comment="%s - sente(black)/gote(white)">%s didn\'t move</string>
 	<string name="shareThisUrlToLetSpectatorsSeeTheGame">Condividi questo URL per ammettere spettatori alla partita</string>
@@ -79,7 +71,7 @@
 	<string name="deleteFromHere">Elimina da qui</string>
 	<string name="forceVariation">Mostra come variante</string>
 	<string name="move">Mossa</string>
-	<plurals name="moves">
+	<plurals name="nbMoves">
 		<item quantity="one">%s move</item>
 		<item quantity="other">%s moves</item>
 	</plurals>
@@ -208,11 +200,7 @@
 	<string name="drawOfferDeclined">Offerta di patta rifiutata</string>
 	<string name="drawOfferAccepted">Offerta di patta accettata</string>
 	<string name="drawOfferCanceled">Offerta di patta annullata</string>
-	<string name="whiteOffersDraw">Il Bianco offre patta</string>
-	<string name="blackOffersDraw">Il Nero offre patta</string>
 	<string name="xOffersDraw" comment="%s - sente(black)/gote(white)">%s offers draw</string>
-	<string name="whiteDeclinesDraw">Il Bianco rifiuta la patta</string>
-	<string name="blackDeclinesDraw">Il Nero rifiuta la patta</string>
 	<string name="xDeclinesDraw" comment="%s - sente(black)/gote(white)">%s declines draw</string>
 	<string name="yourOpponentOffersADraw">Il tuo avversario offre patta</string>
 	<string name="accept">Accetta</string>
@@ -366,8 +354,6 @@ computer analysis, game chat and shareable URL.</string>
 	<string name="clickOnTheBoardToMakeYourMove">Clicca sulla scacchiera e fai la tua mossa, per provare che sei un umano.</string>
 	<string name="captcha.fail">Please solve the shogi captcha.</string>
 	<string name="notACheckmate">Non è scacco matto</string>
-	<string name="whiteCheckmatesInOneMove">Il Bianco dà matto in una mossa</string>
-	<string name="blackCheckmatesInOneMove">Il Nero dà matto in una mossa</string>
 	<string name="xCheckmatesInOneMove" comment="%s - sente(black)/gote(white)">%s to checkmate in one move</string>
 	<string name="retry">Riprova</string>
 	<string name="reconnecting">Riconnessione</string>
@@ -438,8 +424,6 @@ computer analysis, game chat and shareable URL.</string>
 	<string name="performance">Performance</string>
 	<string name="tournamentComplete">Torneo terminato</string>
 	<string name="movesPlayed">Mosse giocate</string>
-	<string name="whiteWins">Il Bianco vince</string>
-	<string name="blackWins">Il Nero vince</string>
 	<string name="xWins" comment="Stats in tournament (ex. Sente wins: 51%)">%s wins</string>
 	<string name="draws">Patte</string>
 	<string name="nextXTournament">Prossimo torneo %s:</string>
@@ -810,8 +794,6 @@ computer analysis, game chat and shareable URL.</string>
 	<string name="hideBestMove">Nascondi la mossa migliore</string>
 	<string name="getAHint">Vuoi un suggerimento?</string>
 	<string name="evaluatingYourMove">Valutazione della tua mossa in corso...</string>
-	<string name="whiteWinsGame">Il Bianco vince</string>
-	<string name="blackWinsGame">Il Nero vince</string>
 	<string name="xWinsGame" comment="%s - sente(black)/gote(white)">%s wins</string>
 	<string name="learnFromYourMistakes">Impara dai tuoi errori</string>
 	<string name="learnFromThisMistake">Impara da questo errore</string>
