--- a/translation/dest/site/ko-KR.xml
+++ b/translation/dest/site/ko-KR.xml
@@ -29,8 +29,6 @@
 	<string name="uwate" comment="Should be 'Uwate', unless equivalent written differently exists (ex. 上手 in JP; し - ši in CZ instead of shi) - https://en.wikipedia.org/wiki/Handicap_(shogi)">Uwate</string>
 	<string name="randomColor" comment="Side - sente/gote">무작위</string>
 	<string name="createAGame">새 게임 만들기</string>
-	<string name="whiteIsVictorious">백색 승리</string>
-	<string name="blackIsVictorious">흑색 승리</string>
 	<string name="xIsVictorious" comment="%s - sente(black)/gote(white)">%s is victorious</string>
 	<string name="youPlayAsX" comment="%s - sente(black)/gote(white)">You play as %s</string>
 	<string name="itsYourTurn">당신이 둘 차례입니다!</string>
@@ -39,8 +37,6 @@
 	<string name="newOpponent">새 상대</string>
 	<string name="yourOpponentWantsToPlayANewGameWithYou">상대가 재대결을 원합니다</string>
 	<string name="joinTheGame">게임 참가</string>
-	<string name="whitePlays">백색 차례</string>
-	<string name="blackPlays">흑색 차례</string>
 	<string name="xPlays" comment="%s - sente(black)/gote(white)">%s to play</string>
 	<plurals name="opponentLeftCounter">
 		<item quantity="other">당신의 상대가 게임을 나갔습니다. %s 초 후에 승리를 주장할 수 있습니다.</item>
@@ -51,11 +47,7 @@
 	<string name="forceDraw">무승부 처리</string>
 	<string name="talkInChat">건전한 채팅을 해주세요!</string>
 	<string name="theFirstPersonToComeOnThisUrlWillPlayWithYou">이 URL로 가장 먼저 들어온 사람과 체스를 두게 됩니다.</string>
-	<string name="whiteResigned">백색 기권</string>
-	<string name="blackResigned">흑색 기권</string>
 	<string name="xResigned" comment="%s - sente(black)/gote(white)">%s resigned</string>
-	<string name="whiteLeftTheGame">백색이 게임을 나갔습니다</string>
-	<string name="blackLeftTheGame">흑색이 게임을 나갔습니다</string>
 	<string name="xLeftTheGame" comment="%s - sente(black)/gote(white)">%s left the game</string>
 	<string name="xDidntMove" comment="%s - sente(black)/gote(white)">%s didn\'t move</string>
 	<string name="shareThisUrlToLetSpectatorsSeeTheGame">이 URL을 공유해서 관전할 수 있게 하세요.</string>
@@ -78,7 +70,7 @@
 	<string name="deleteFromHere">여기서부터 삭제</string>
 	<string name="forceVariation">변화 강제하기</string>
 	<string name="move">수</string>
-	<plurals name="moves">
+	<plurals name="nbMoves">
 		<item quantity="other">%s moves</item>
 	</plurals>
 	<string name="variantLoss">변형 체스에서 패배</string>
@@ -198,11 +190,7 @@
 	<string name="drawOfferDeclined">무승부 요청이 거절 되었습니다</string>
 	<string name="drawOfferAccepted">무승부 요청이 승낙 됐습니다</string>
 	<string name="drawOfferCanceled">무승부 요청을 취소했습니다</string>
-	<string name="whiteOffersDraw">흰색이 무승부를 제안했습니다</string>
-	<string name="blackOffersDraw">검은색이 무승부를 제안했습니다</string>
 	<string name="xOffersDraw" comment="%s - sente(black)/gote(white)">%s offers draw</string>
-	<string name="whiteDeclinesDraw">흰색이 무승부 제안을 거절했습니다</string>
-	<string name="blackDeclinesDraw">검은색이 무승부 제안을 거절했습니다</string>
 	<string name="xDeclinesDraw" comment="%s - sente(black)/gote(white)">%s declines draw</string>
 	<string name="yourOpponentOffersADraw">상대가 무승부를 요청했습니다</string>
 	<string name="accept">승낙</string>
@@ -343,8 +331,6 @@ computer analysis, game chat and shareable URL.</string>
 	<string name="clickOnTheBoardToMakeYourMove">보드를 클릭해서 체스 퍼즐을 풀고 당신이 사람임을 알려주세요.</string>
 	<string name="captcha.fail">Please solve the shogi captcha.</string>
 	<string name="notACheckmate">체크메이트가 아닙니다.</string>
-	<string name="whiteCheckmatesInOneMove">백이 한 수 만에 체크메이트하기</string>
-	<string name="blackCheckmatesInOneMove">흑이 한 수 만에 체크메이트하기</string>
 	<string name="xCheckmatesInOneMove" comment="%s - sente(black)/gote(white)">%s to checkmate in one move</string>
 	<string name="retry">재시도</string>
 	<string name="reconnecting">연결 재시도 중</string>
@@ -411,8 +397,6 @@ computer analysis, game chat and shareable URL.</string>
 	<string name="performance">승점</string>
 	<string name="tournamentComplete">대회 종료</string>
 	<string name="movesPlayed">말 이동 횟수</string>
-	<string name="whiteWins">하얀 말로 우승</string>
-	<string name="blackWins">검은 말로 우승</string>
 	<string name="xWins" comment="Stats in tournament (ex. Sente wins: 51%)">%s wins</string>
 	<string name="draws">무승부</string>
 	<string name="nextXTournament">다음 %s 대회:</string>
@@ -775,8 +759,6 @@ computer analysis, game chat and shareable URL.</string>
 	<string name="hideBestMove">최상의 수 숨기기</string>
 	<string name="getAHint">힌트 보기</string>
 	<string name="evaluatingYourMove">이동하신 수를 평가 중입니다…</string>
-	<string name="whiteWinsGame">하얀색 승리</string>
-	<string name="blackWinsGame">검은색 승리</string>
 	<string name="xWinsGame" comment="%s - sente(black)/gote(white)">%s wins</string>
 	<string name="learnFromYourMistakes">실수에서 배우기</string>
 	<string name="learnFromThisMistake">이 실수에서 배우기</string>
