--- a/translation/dest/site/pt-BR.xml
+++ b/translation/dest/site/pt-BR.xml
@@ -29,8 +29,6 @@
 	<string name="uwate" comment="Should be 'Uwate', unless equivalent written differently exists (ex. 上手 in JP; し - ši in CZ instead of shi) - https://en.wikipedia.org/wiki/Handicap_(shogi)">Uwate</string>
 	<string name="randomColor" comment="Side - sente/gote">Cor aleatória</string>
 	<string name="createAGame">Criar uma partida</string>
-	<string name="whiteIsVictorious">Brancas vencem</string>
-	<string name="blackIsVictorious">Pretas vencem</string>
 	<string name="xIsVictorious" comment="%s - sente(black)/gote(white)">%s vencem</string>
 	<string name="youPlayAsX" comment="%s - sente(black)/gote(white)">You play as %s</string>
 	<string name="itsYourTurn">É a sua vez!</string>
@@ -39,8 +37,6 @@
 	<string name="newOpponent">Novo adversário</string>
 	<string name="yourOpponentWantsToPlayANewGameWithYou">Seu oponente quer jogar uma nova partida contra você</string>
 	<string name="joinTheGame">Entrar no jogo</string>
-	<string name="whitePlays">Gote joga</string>
-	<string name="blackPlays">Sente joga</string>
 	<string name="xPlays" comment="%s - sente(black)/gote(white)">%s to play</string>
 	<plurals name="opponentLeftCounter">
 		<item quantity="one">O seu adversário deixou a partida. Você pode reivindicar vitória em %s segundo.</item>
@@ -52,11 +48,7 @@
 	<string name="forceDraw">Reivindicar empate</string>
 	<string name="talkInChat">Por favor, seja gentil no chat!</string>
 	<string name="theFirstPersonToComeOnThisUrlWillPlayWithYou">A primeira pessoa que acessar esta URL jogará com você.</string>
-	<string name="whiteResigned">Gote desistiu</string>
-	<string name="blackResigned">Sente desistiu</string>
 	<string name="xResigned" comment="%s - sente(black)/gote(white)">%s resigned</string>
-	<string name="whiteLeftTheGame">Gote deixou a partida</string>
-	<string name="blackLeftTheGame">Sente deixou a partida</string>
 	<string name="xLeftTheGame" comment="%s - sente(black)/gote(white)">%s left the game</string>
 	<string name="xDidntMove" comment="%s - sente(black)/gote(white)">%s didn\'t move</string>
 	<string name="shareThisUrlToLetSpectatorsSeeTheGame">Compartilhe esta URL para convidar espectadores</string>
@@ -79,7 +71,7 @@
 	<string name="deleteFromHere">Excluir a partir daqui</string>
 	<string name="forceVariation">Variante forçada</string>
 	<string name="move">Movimentos</string>
-	<plurals name="moves">
+	<plurals name="nbMoves">
 		<item quantity="one">%s move</item>
 		<item quantity="other">%s moves</item>
 	</plurals>
@@ -208,11 +200,7 @@
 	<string name="drawOfferDeclined">Proposta de empate recusada</string>
 	<string name="drawOfferAccepted">Proposta de empate aceita</string>
 	<string name="drawOfferCanceled">Proposta de empate cancelada</string>
-	<string name="whiteOffersDraw">Brancas oferecem empate</string>
-	<string name="blackOffersDraw">Pretas oferecem empate</string>
 	<string name="xOffersDraw" comment="%s - sente(black)/gote(white)">%s oferecem empate</string>
-	<string name="whiteDeclinesDraw">Brancas recusam empate</string>
-	<string name="blackDeclinesDraw">Pretas recusam empate</string>
 	<string name="xDeclinesDraw" comment="%s - sente(black)/gote(white)">%s declines draw</string>
 	<string name="yourOpponentOffersADraw">Seu adversário oferece empate</string>
 	<string name="accept">Aceitar</string>
@@ -366,8 +354,6 @@ computer analysis, game chat and shareable URL.</string>
 	<string name="clickOnTheBoardToMakeYourMove">Clique no tabuleiro para fazer sua jogada, provando que é humano.</string>
 	<string name="captcha.fail">Por favor, resolva o captcha de shogi.</string>
 	<string name="notACheckmate">Não é xeque-mate.</string>
-	<string name="whiteCheckmatesInOneMove">Xeque-mate em um lance para as brancas</string>
-	<string name="blackCheckmatesInOneMove">Xeque-mate em um lance para as pretas</string>
 	<string name="xCheckmatesInOneMove" comment="%s - sente(black)/gote(white)">%s to checkmate in one move</string>
 	<string name="retry">Tentar novamente</string>
 	<string name="reconnecting">Reconectando</string>
@@ -438,8 +424,6 @@ computer analysis, game chat and shareable URL.</string>
 	<string name="performance">Desempenho</string>
 	<string name="tournamentComplete">Torneio completo</string>
 	<string name="movesPlayed">Movimentos realizados</string>
-	<string name="whiteWins">Brancas venceram</string>
-	<string name="blackWins">Pretas venceram</string>
 	<string name="xWins" comment="Stats in tournament (ex. Sente wins: 51%)">%s wins</string>
 	<string name="draws">Empates</string>
 	<string name="nextXTournament">Próximo torneio %s:</string>
@@ -810,8 +794,6 @@ computer analysis, game chat and shareable URL.</string>
 	<string name="hideBestMove">Esconder o melhor lance</string>
 	<string name="getAHint">Obter uma dica</string>
 	<string name="evaluatingYourMove">Avaliando o seu movimento ...</string>
-	<string name="whiteWinsGame">Brancas vencem</string>
-	<string name="blackWinsGame">Pretas vencem</string>
 	<string name="xWinsGame" comment="%s - sente(black)/gote(white)">%s wins</string>
 	<string name="learnFromYourMistakes">Aprenda com seus erros</string>
 	<string name="learnFromThisMistake">Aprenda com este erro</string>
