--- a/translation/dest/site/pt-PT.xml
+++ b/translation/dest/site/pt-PT.xml
@@ -29,8 +29,6 @@
 	<string name="uwate" comment="Should be 'Uwate', unless equivalent written differently exists (ex. 上手 in JP; し - ši in CZ instead of shi) - https://en.wikipedia.org/wiki/Handicap_(shogi)">Uwate</string>
 	<string name="randomColor" comment="Side - sente/gote">Cor aleatória</string>
 	<string name="createAGame">Criar uma partida</string>
-	<string name="whiteIsVictorious">as brancas ganham</string>
-	<string name="blackIsVictorious">as pretas ganham</string>
 	<string name="xIsVictorious" comment="%s - sente(black)/gote(white)">%s is victorious</string>
 	<string name="youPlayAsX" comment="%s - sente(black)/gote(white)">You play as %s</string>
 	<string name="itsYourTurn">É a tua vez!</string>
@@ -39,8 +37,6 @@
 	<string name="newOpponent">Novo adversário</string>
 	<string name="yourOpponentWantsToPlayANewGameWithYou">O teu adversário quer jogar uma nova partida contra ti</string>
 	<string name="joinTheGame">Entrar no jogo</string>
-	<string name="whitePlays">Jogam as brancas</string>
-	<string name="blackPlays">Jogam as pretas</string>
 	<string name="xPlays" comment="%s - sente(black)/gote(white)">%s to play</string>
 	<plurals name="opponentLeftCounter">
 		<item quantity="one">O teu adversário deixou a partida. Podes reivindicar vitória em %s segundo.</item>
@@ -52,11 +48,7 @@
 	<string name="forceDraw">Reivindicar empate</string>
 	<string name="talkInChat">Por favor, sê gentil na conversa!</string>
 	<string name="theFirstPersonToComeOnThisUrlWillPlayWithYou">A primeira pessoa que aceder a este link jogará contra ti.</string>
-	<string name="whiteResigned">As brancas desistiram</string>
-	<string name="blackResigned">As pretas desistiram</string>
 	<string name="xResigned" comment="%s - sente(black)/gote(white)">%s resigned</string>
-	<string name="whiteLeftTheGame">As brancas deixaram a partida</string>
-	<string name="blackLeftTheGame">As pretas deixaram a partida</string>
 	<string name="xLeftTheGame" comment="%s - sente(black)/gote(white)">%s left the game</string>
 	<string name="xDidntMove" comment="%s - sente(black)/gote(white)">%s didn\'t move</string>
 	<string name="shareThisUrlToLetSpectatorsSeeTheGame">Partilha este link para convidares espectadores a verem a partida</string>
@@ -79,7 +71,7 @@
 	<string name="deleteFromHere">Eliminar a partir de aqui</string>
 	<string name="forceVariation">Forçar variante</string>
 	<string name="move">Jogada</string>
-	<plurals name="moves">
+	<plurals name="nbMoves">
 		<item quantity="one">%s move</item>
 		<item quantity="other">%s moves</item>
 	</plurals>
@@ -208,11 +200,7 @@
 	<string name="drawOfferDeclined">Proposta de empate recusada</string>
 	<string name="drawOfferAccepted">Proposta de empate aceite</string>
 	<string name="drawOfferCanceled">Proposta de empate cancelada</string>
-	<string name="whiteOffersDraw">As brancas propõem empate</string>
-	<string name="blackOffersDraw">As pretas propõem empate</string>
 	<string name="xOffersDraw" comment="%s - sente(black)/gote(white)">%s offers draw</string>
-	<string name="whiteDeclinesDraw">As brancas recusam o empate</string>
-	<string name="blackDeclinesDraw">As pretas recusam o empate</string>
 	<string name="xDeclinesDraw" comment="%s - sente(black)/gote(white)">%s declines draw</string>
 	<string name="yourOpponentOffersADraw">O teu adversário propõe empate</string>
 	<string name="accept">Aceitar</string>
@@ -366,8 +354,6 @@ computer analysis, game chat and shareable URL.</string>
 	<string name="clickOnTheBoardToMakeYourMove">Clica no tabuleiro para fazeres a tua jogada, provando que és humano.</string>
 	<string name="captcha.fail">Please solve the shogi captcha.</string>
 	<string name="notACheckmate">Não é xeque-mate.</string>
-	<string name="whiteCheckmatesInOneMove">As brancas dão mate em um movimento</string>
-	<string name="blackCheckmatesInOneMove">As pretas dão mate em um movimento</string>
 	<string name="xCheckmatesInOneMove" comment="%s - sente(black)/gote(white)">%s to checkmate in one move</string>
 	<string name="retry">Tentar novamente</string>
 	<string name="reconnecting">Reconectando</string>
@@ -438,8 +424,6 @@ computer analysis, game chat and shareable URL.</string>
 	<string name="performance">Desempenho</string>
 	<string name="tournamentComplete">Torneio terminado</string>
 	<string name="movesPlayed">Movimentos feitos</string>
-	<string name="whiteWins">Vitórias com brancas</string>
-	<string name="blackWins">Vitórias com as pretas</string>
 	<string name="xWins" comment="Stats in tournament (ex. Sente wins: 51%)">%s wins</string>
 	<string name="draws">Empates</string>
 	<string name="nextXTournament">Próximo torneio de %s:</string>
@@ -810,8 +794,6 @@ computer analysis, game chat and shareable URL.</string>
 	<string name="hideBestMove">Ocultar o melhor movimento</string>
 	<string name="getAHint">Obter uma dica</string>
 	<string name="evaluatingYourMove">A analisar o teu movimento ...</string>
-	<string name="whiteWinsGame">As brancas ganham</string>
-	<string name="blackWinsGame">As pretas ganham</string>
 	<string name="xWinsGame" comment="%s - sente(black)/gote(white)">%s wins</string>
 	<string name="learnFromYourMistakes">Aprende com os teus erros</string>
 	<string name="learnFromThisMistake">Aprende com este erro</string>
