--- a/translation/dest/site/ro-RO.xml
+++ b/translation/dest/site/ro-RO.xml
@@ -29,8 +29,6 @@
 	<string name="uwate" comment="Should be 'Uwate', unless equivalent written differently exists (ex. 上手 in JP; し - ši in CZ instead of shi) - https://en.wikipedia.org/wiki/Handicap_(shogi)">Uwate</string>
 	<string name="randomColor" comment="Side - sente/gote">Culoare aleatorie</string>
 	<string name="createAGame">Creează un joc nou</string>
-	<string name="whiteIsVictorious">Albul a câştigat</string>
-	<string name="blackIsVictorious">Negrul a câştigat</string>
 	<string name="xIsVictorious" comment="%s - sente(black)/gote(white)">%s is victorious</string>
 	<string name="youPlayAsX" comment="%s - sente(black)/gote(white)">You play as %s</string>
 	<string name="itsYourTurn">E rândul tău!</string>
@@ -39,8 +37,6 @@
 	<string name="newOpponent">Adversar nou</string>
 	<string name="yourOpponentWantsToPlayANewGameWithYou">Adversarul dvs. vă propune o nouă partidă</string>
 	<string name="joinTheGame">Intră în partidă</string>
-	<string name="whitePlays">Albul la mutare</string>
-	<string name="blackPlays">Negrul la mutare</string>
 	<string name="xPlays" comment="%s - sente(black)/gote(white)">%s to play</string>
 	<plurals name="opponentLeftCounter">
 		<item quantity="one">Adversarul tău a părăsit jocul. Poți revendica victoria peste %s secundă.</item>
@@ -53,11 +49,7 @@
 	<string name="forceDraw">Decideți remiză</string>
 	<string name="talkInChat">Conversați cu bun simț în zona de chat</string>
 	<string name="theFirstPersonToComeOnThisUrlWillPlayWithYou">Prima persoană care accesează acest link va începe să joace cu dvs.</string>
-	<string name="whiteResigned">Albul a cedat</string>
-	<string name="blackResigned">Negrul a cedat</string>
 	<string name="xResigned" comment="%s - sente(black)/gote(white)">%s resigned</string>
-	<string name="whiteLeftTheGame">Albul a părăsit partida</string>
-	<string name="blackLeftTheGame">Negrul a părăsit partida</string>
 	<string name="xLeftTheGame" comment="%s - sente(black)/gote(white)">%s left the game</string>
 	<string name="xDidntMove" comment="%s - sente(black)/gote(white)">%s didn\'t move</string>
 	<string name="shareThisUrlToLetSpectatorsSeeTheGame">Distribuiţi acest link pentru a permite spectatorilor să vizioneze partida</string>
@@ -80,7 +72,7 @@
 	<string name="deleteFromHere">Șterge de aici</string>
 	<string name="forceVariation">Forțează variația</string>
 	<string name="move">Mutare</string>
-	<plurals name="moves">
+	<plurals name="nbMoves">
 		<item quantity="one">%s move</item>
 		<item quantity="few">%s moves</item>
 		<item quantity="other">%s moves</item>
@@ -218,11 +210,7 @@
 	<string name="drawOfferDeclined">Propunere de remiză refuzată</string>
 	<string name="drawOfferAccepted">Propunere de remiză acceptată</string>
 	<string name="drawOfferCanceled">Propunere remiză anulată</string>
-	<string name="whiteOffersDraw">Albul a oferit remiza</string>
-	<string name="blackOffersDraw">Negrul a oferit remiza</string>
 	<string name="xOffersDraw" comment="%s - sente(black)/gote(white)">%s offers draw</string>
-	<string name="whiteDeclinesDraw">Albul refuză propunerea de remiză</string>
-	<string name="blackDeclinesDraw">Negrul refuză propunerea de remiză</string>
 	<string name="xDeclinesDraw" comment="%s - sente(black)/gote(white)">%s declines draw</string>
 	<string name="yourOpponentOffersADraw">Adversarul dvs. vă propune remiza</string>
 	<string name="accept">Acceptați</string>
@@ -389,8 +377,6 @@ computer analysis, game chat and shareable URL.</string>
 	<string name="clickOnTheBoardToMakeYourMove">Apăsați pe tablă pentru a muta, dovedind că sunteți om.</string>
 	<string name="captcha.fail">Please solve the shogi captcha.</string>
 	<string name="notACheckmate">Nu este mat</string>
-	<string name="whiteCheckmatesInOneMove">Albele să dea șah mat într-o mutare</string>
-	<string name="blackCheckmatesInOneMove">Negrele să dea șah mat într-o mutare</string>
 	<string name="xCheckmatesInOneMove" comment="%s - sente(black)/gote(white)">%s to checkmate in one move</string>
 	<string name="retry">Mai încercați</string>
 	<string name="reconnecting">Se reconectează</string>
@@ -465,8 +451,6 @@ computer analysis, game chat and shareable URL.</string>
 	<string name="performance">Performanță</string>
 	<string name="tournamentComplete">Turneu încheiat</string>
 	<string name="movesPlayed">Mutări jucate</string>
-	<string name="whiteWins">Albul câștigă</string>
-	<string name="blackWins">Negrul câștigă</string>
 	<string name="xWins" comment="Stats in tournament (ex. Sente wins: 51%)">%s wins</string>
 	<string name="draws">Remize</string>
 	<string name="nextXTournament">Următorul turneu %s:</string>
@@ -845,8 +829,6 @@ computer analysis, game chat and shareable URL.</string>
 	<string name="hideBestMove">Ascunde cea mai bună mutare</string>
 	<string name="getAHint">Obține un indiciu</string>
 	<string name="evaluatingYourMove">Evaluându-ți mutarea ...</string>
-	<string name="whiteWinsGame">Albele câștigă</string>
-	<string name="blackWinsGame">Negrele câștigă</string>
 	<string name="xWinsGame" comment="%s - sente(black)/gote(white)">%s wins</string>
 	<string name="learnFromYourMistakes">Învață din greșelile tale</string>
 	<string name="learnFromThisMistake">Învață din greșeli</string>
