--- a/translation/dest/site/tl-PH.xml
+++ b/translation/dest/site/tl-PH.xml
@@ -29,8 +29,6 @@
 	<string name="uwate" comment="Should be 'Uwate', unless equivalent written differently exists (ex. 上手 in JP; し - ši in CZ instead of shi) - https://en.wikipedia.org/wiki/Handicap_(shogi)">Uwate</string>
 	<string name="randomColor" comment="Side - sente/gote">Random side</string>
 	<string name="createAGame">Gumawa ng laro</string>
-	<string name="whiteIsVictorious">Gote ay nagwagi</string>
-	<string name="blackIsVictorious">Sente ay nagwagi</string>
 	<string name="xIsVictorious" comment="%s - sente(black)/gote(white)">%s ay nagwagi</string>
 	<string name="youPlayAsX" comment="%s - sente(black)/gote(white)">You play as %s</string>
 	<string name="itsYourTurn">It\'s your turn!</string>
@@ -39,8 +37,6 @@
 	<string name="newOpponent">Bagong Kalaban</string>
 	<string name="yourOpponentWantsToPlayANewGameWithYou">Gusto muling makipaglaro ng iyong katunggali</string>
 	<string name="joinTheGame">Sumali sa laro</string>
-	<string name="whitePlays">Galaw ng Gote</string>
-	<string name="blackPlays">Galaw ng Sente</string>
 	<string name="xPlays" comment="%s - sente(black)/gote(white)">%s to play</string>
 	<plurals name="opponentLeftCounter">
 		<item quantity="one">Your opponent left the game. You can claim victory in %s second.</item>
@@ -52,11 +48,7 @@
 	<string name="forceDraw">Tumawag ng tabla</string>
 	<string name="talkInChat">Maging magalang sa paggamit ng chat!</string>
 	<string name="theFirstPersonToComeOnThisUrlWillPlayWithYou">Ang unang taong pupunta sa link nito ay iyong makakalaro.</string>
-	<string name="whiteResigned">Nagresign si Gote</string>
-	<string name="blackResigned">Nagresign si Sente</string>
 	<string name="xResigned" comment="%s - sente(black)/gote(white)">%s resigned</string>
-	<string name="whiteLeftTheGame">Si Gote ay umalis sa laro</string>
-	<string name="blackLeftTheGame">Si Sente ay umalis sa laro</string>
 	<string name="xLeftTheGame" comment="%s - sente(black)/gote(white)">%s left the game</string>
 	<string name="xDidntMove" comment="%s - sente(black)/gote(white)">%s didn\'t move</string>
 	<string name="shareThisUrlToLetSpectatorsSeeTheGame">Share this URL to let spectators see the game</string>
@@ -79,7 +71,7 @@
 	<string name="deleteFromHere">Buharin mula dito</string>
 	<string name="forceVariation">Force variation</string>
 	<string name="move">Galaw</string>
-	<plurals name="moves">
+	<plurals name="nbMoves">
 		<item quantity="one">%s move</item>
 		<item quantity="other">%s moves</item>
 	</plurals>
@@ -208,11 +200,7 @@
 	<string name="drawOfferDeclined">Draw offer declined</string>
 	<string name="drawOfferAccepted">Draw offer accepted</string>
 	<string name="drawOfferCanceled">Draw offer cancelled</string>
-	<string name="whiteOffersDraw">Gote offers draw</string>
-	<string name="blackOffersDraw">Sente offers draw</string>
 	<string name="xOffersDraw" comment="%s - sente(black)/gote(white)">%s offers draw</string>
-	<string name="whiteDeclinesDraw">Gote declines draw</string>
-	<string name="blackDeclinesDraw">Sente declines draw</string>
 	<string name="xDeclinesDraw" comment="%s - sente(black)/gote(white)">%s declines draw</string>
 	<string name="yourOpponentOffersADraw">Your opponent offers a draw</string>
 	<string name="accept">Tanggapin</string>
@@ -366,8 +354,6 @@ computer analysis, game chat and shareable URL.</string>
 	<string name="clickOnTheBoardToMakeYourMove">Click on the board to make your move, and prove you are human.</string>
 	<string name="captcha.fail">Please solve the shogi captcha.</string>
 	<string name="notACheckmate">Not a checkmate</string>
-	<string name="whiteCheckmatesInOneMove">Gote to checkmate in one move</string>
-	<string name="blackCheckmatesInOneMove">Sente to checkmate in one move</string>
 	<string name="xCheckmatesInOneMove" comment="%s - sente(black)/gote(white)">%s to checkmate in one move</string>
 	<string name="retry">Retry</string>
 	<string name="reconnecting">Reconnecting</string>
@@ -438,8 +424,6 @@ computer analysis, game chat and shareable URL.</string>
 	<string name="performance">Performance</string>
 	<string name="tournamentComplete">Tournament complete</string>
 	<string name="movesPlayed">Moves played</string>
-	<string name="whiteWins">Gote wins</string>
-	<string name="blackWins">Sente wins</string>
 	<string name="xWins" comment="Stats in tournament (ex. Sente wins: 51%)">%s wins</string>
 	<string name="draws">Draws</string>
 	<string name="nextXTournament">Next %s tournament:</string>
@@ -810,8 +794,6 @@ computer analysis, game chat and shareable URL.</string>
 	<string name="hideBestMove">Hide best move</string>
 	<string name="getAHint">Get a hint</string>
 	<string name="evaluatingYourMove">Evaluating your move ...</string>
-	<string name="whiteWinsGame">Gote wins</string>
-	<string name="blackWinsGame">Sente wins</string>
 	<string name="xWinsGame" comment="%s - sente(black)/gote(white)">%s wins</string>
 	<string name="learnFromYourMistakes">Learn from your mistakes</string>
 	<string name="learnFromThisMistake">Learn from this mistake</string>
