--- a/translation/dest/site/tr-TR.xml
+++ b/translation/dest/site/tr-TR.xml
@@ -29,8 +29,6 @@
 	<string name="uwate" comment="Should be 'Uwate', unless equivalent written differently exists (ex. 上手 in JP; し - ši in CZ instead of shi) - https://en.wikipedia.org/wiki/Handicap_(shogi)">Uwate</string>
 	<string name="randomColor" comment="Side - sente/gote">Rastgele renk</string>
 	<string name="createAGame">Yeni bir oyun kur</string>
-	<string name="whiteIsVictorious">Zafer Beyazın</string>
-	<string name="blackIsVictorious">Zafer Siyahın</string>
 	<string name="xIsVictorious" comment="%s - sente(black)/gote(white)">%s is victorious</string>
 	<string name="youPlayAsX" comment="%s - sente(black)/gote(white)">You play as %s</string>
 	<string name="itsYourTurn">Sıra sizde!</string>
@@ -39,8 +37,6 @@
 	<string name="newOpponent">Yeni rakip</string>
 	<string name="yourOpponentWantsToPlayANewGameWithYou">Rakibiniz sizinle yeni bir oyun oynamak istiyor</string>
 	<string name="joinTheGame">Oyuna katıl</string>
-	<string name="whitePlays">Hamle Gote\'de</string>
-	<string name="blackPlays">Hamle Sente\'de</string>
 	<string name="xPlays" comment="%s - sente(black)/gote(white)">%s to play</string>
 	<plurals name="opponentLeftCounter">
 		<item quantity="one">Rakibiniz oyundan ayrıldı. %s saniye sonra galibiyet talep edebilirsiniz.</item>
@@ -52,11 +48,7 @@
 	<string name="forceDraw">Beraberlik ilan et</string>
 	<string name="talkInChat">Lütfen sohbette nazik ol!</string>
 	<string name="theFirstPersonToComeOnThisUrlWillPlayWithYou">Bağlantıya ilk ulaşan kişi rakibiniz olacak.</string>
-	<string name="whiteResigned">Beyaz oyundan çekildi</string>
-	<string name="blackResigned">Siyah oyundan çekildi</string>
 	<string name="xResigned" comment="%s - sente(black)/gote(white)">%s resigned</string>
-	<string name="whiteLeftTheGame">Gote oyundan ayrıldı</string>
-	<string name="blackLeftTheGame">Sente oyundan ayrıldı</string>
 	<string name="xLeftTheGame" comment="%s - sente(black)/gote(white)">%s left the game</string>
 	<string name="xDidntMove" comment="%s - sente(black)/gote(white)">%s didn\'t move</string>
 	<string name="shareThisUrlToLetSpectatorsSeeTheGame">Oyunu izlemek isteyenlerle bu bağlantıyı paylaşın</string>
@@ -79,7 +71,7 @@
 	<string name="deleteFromHere">Bu hamleden sonrasını sil</string>
 	<string name="forceVariation">Varyant olarak göster</string>
 	<string name="move">Hamle</string>
-	<plurals name="moves">
+	<plurals name="nbMoves">
 		<item quantity="one">%s move</item>
 		<item quantity="other">%s moves</item>
 	</plurals>
@@ -208,11 +200,7 @@
 	<string name="drawOfferDeclined">Beraberlik teklifi reddedildi</string>
 	<string name="drawOfferAccepted">Beraberlik teklifi kabul edildi</string>
 	<string name="drawOfferCanceled">Beraberlik teklifi iptal edildi</string>
-	<string name="whiteOffersDraw">Beyaz beraberlik teklif ediyor</string>
-	<string name="blackOffersDraw">Siyah beraberlik teklif ediyor</string>
 	<string name="xOffersDraw" comment="%s - sente(black)/gote(white)">%s offers draw</string>
-	<string name="whiteDeclinesDraw">Beyaz beraberlik teklifini geri çevirdi</string>
-	<string name="blackDeclinesDraw">Siyah beraberlik teklifini geri çevirdi</string>
 	<string name="xDeclinesDraw" comment="%s - sente(black)/gote(white)">%s declines draw</string>
 	<string name="yourOpponentOffersADraw">Rakibiniz beraberlik teklif ediyor</string>
 	<string name="accept">Kabul et</string>
@@ -366,8 +354,6 @@ computer analysis, game chat and shareable URL.</string>
 	<string name="clickOnTheBoardToMakeYourMove">İnsan olduğunuzu kanıtlamak için tahtaya tıklayın ve hamlenizi yapın.</string>
 	<string name="captcha.fail">Lütfen shogi captcha\'sını çözün.</string>
 	<string name="notACheckmate">Mat değil</string>
-	<string name="whiteCheckmatesInOneMove">Beyaz bir hamlede mat eder</string>
-	<string name="blackCheckmatesInOneMove">Siyah bir hamlede mat eder</string>
 	<string name="xCheckmatesInOneMove" comment="%s - sente(black)/gote(white)">%s to checkmate in one move</string>
 	<string name="retry">Tekrar dene</string>
 	<string name="reconnecting">Yeniden bağlanılıyor</string>
@@ -438,8 +424,6 @@ computer analysis, game chat and shareable URL.</string>
 	<string name="performance">Performans</string>
 	<string name="tournamentComplete">Turnuva sona erdi</string>
 	<string name="movesPlayed">Toplam hamle sayısı</string>
-	<string name="whiteWins">Beyaz zaferleri</string>
-	<string name="blackWins">Siyah zaferleri</string>
 	<string name="xWins" comment="Stats in tournament (ex. Sente wins: 51%)">%s wins</string>
 	<string name="draws">Beraberlikler</string>
 	<string name="nextXTournament">Sıradaki %s Turnuvası:</string>
@@ -810,8 +794,6 @@ computer analysis, game chat and shareable URL.</string>
 	<string name="hideBestMove">En iyi hamleyi gizle</string>
 	<string name="getAHint">İpucu</string>
 	<string name="evaluatingYourMove">Hamleniz değerlendiriliyor...</string>
-	<string name="whiteWinsGame">Beyaz kazandı</string>
-	<string name="blackWinsGame">Siyah kazandı</string>
 	<string name="xWinsGame" comment="%s - sente(black)/gote(white)">%s wins</string>
 	<string name="learnFromYourMistakes">Hatalarından ders al</string>
 	<string name="learnFromThisMistake">Bu hatadan ders çıkart</string>
