--- a/translation/dest/site/zh-CN.xml
+++ b/translation/dest/site/zh-CN.xml
@@ -29,8 +29,6 @@
 	<string name="uwate" comment="Should be 'Uwate', unless equivalent written differently exists (ex. 上手 in JP; し - ši in CZ instead of shi) - https://en.wikipedia.org/wiki/Handicap_(shogi)">上手</string>
 	<string name="randomColor" comment="Side - sente/gote">随机选色</string>
 	<string name="createAGame">创建对局</string>
-	<string name="whiteIsVictorious">白方胜利</string>
-	<string name="blackIsVictorious">黑方胜利</string>
 	<string name="xIsVictorious" comment="%s - sente(black)/gote(white)">%s is victorious</string>
 	<string name="youPlayAsX" comment="%s - sente(black)/gote(white)">You play as %s</string>
 	<string name="itsYourTurn">轮到你了！</string>
@@ -39,8 +37,6 @@
 	<string name="newOpponent">新对手</string>
 	<string name="yourOpponentWantsToPlayANewGameWithYou">你的对手想和你再玩一局</string>
 	<string name="joinTheGame">加入对局</string>
-	<string name="whitePlays">白方走棋</string>
-	<string name="blackPlays">黑方走棋</string>
 	<string name="xPlays" comment="%s - sente(black)/gote(white)">%s to play</string>
 	<plurals name="opponentLeftCounter">
 		<item quantity="other">你的对手已离开棋局。你将在 %s 秒后胜利。</item>
@@ -51,11 +47,7 @@
 	<string name="forceDraw">和棋</string>
 	<string name="talkInChat">聊天请注意文明用语。</string>
 	<string name="theFirstPersonToComeOnThisUrlWillPlayWithYou">第一个访问此网址的人将与你下棋。</string>
-	<string name="whiteResigned">白方认输</string>
-	<string name="blackResigned">黑方认输</string>
 	<string name="xResigned" comment="%s - sente(black)/gote(white)">%s resigned</string>
-	<string name="whiteLeftTheGame">白方离开了棋局</string>
-	<string name="blackLeftTheGame">黑方离开了棋局</string>
 	<string name="xLeftTheGame" comment="%s - sente(black)/gote(white)">%s left the game</string>
 	<string name="xDidntMove" comment="%s - sente(black)/gote(white)">%s didn\'t move</string>
 	<string name="shareThisUrlToLetSpectatorsSeeTheGame">分享此网址，邀请观众观战</string>
@@ -78,7 +70,7 @@
 	<string name="deleteFromHere">从此处开始删除</string>
 	<string name="forceVariation">强制变着</string>
 	<string name="move">走棋</string>
-	<plurals name="moves">
+	<plurals name="nbMoves">
 		<item quantity="other">%s moves</item>
 	</plurals>
 	<string name="variantLoss">变体输了</string>
@@ -198,11 +190,7 @@
 	<string name="drawOfferDeclined">和棋请求被拒绝</string>
 	<string name="drawOfferAccepted">对方同意和棋</string>
 	<string name="drawOfferCanceled">和棋请求已取消</string>
-	<string name="whiteOffersDraw">白方提出和棋</string>
-	<string name="blackOffersDraw">黑方提出和棋</string>
 	<string name="xOffersDraw" comment="%s - sente(black)/gote(white)">%s offers draw</string>
-	<string name="whiteDeclinesDraw">白方拒绝和棋</string>
-	<string name="blackDeclinesDraw">黑方拒绝和棋</string>
 	<string name="xDeclinesDraw" comment="%s - sente(black)/gote(white)">%s declines draw</string>
 	<string name="yourOpponentOffersADraw">你的对手提出和棋</string>
 	<string name="accept">接受</string>
@@ -342,8 +330,6 @@
 	<string name="clickOnTheBoardToMakeYourMove">点击棋盘走棋来证明你是人类。</string>
 	<string name="captcha.fail">请解答将棋验证码。</string>
 	<string name="notACheckmate">沒有将死</string>
-	<string name="whiteCheckmatesInOneMove">白方一步将死</string>
-	<string name="blackCheckmatesInOneMove">黑方一步将死</string>
 	<string name="xCheckmatesInOneMove" comment="%s - sente(black)/gote(white)">%s to checkmate in one move</string>
 	<string name="retry">重试</string>
 	<string name="reconnecting">重新连接中</string>
@@ -410,8 +396,6 @@
 	<string name="performance">表现评分</string>
 	<string name="tournamentComplete">锦标赛结束</string>
 	<string name="movesPlayed">步数</string>
-	<string name="whiteWins">白方胜</string>
-	<string name="blackWins">黑方胜</string>
 	<string name="xWins" comment="Stats in tournament (ex. Sente wins: 51%)">%s wins</string>
 	<string name="draws">和棋</string>
 	<string name="nextXTournament">下一个%s锦标赛</string>
@@ -774,8 +758,6 @@
 	<string name="hideBestMove">隐藏最佳着</string>
 	<string name="getAHint">提示</string>
 	<string name="evaluatingYourMove">评估走法中……</string>
-	<string name="whiteWinsGame">白方胜</string>
-	<string name="blackWinsGame">黑方胜</string>
 	<string name="xWinsGame" comment="%s - sente(black)/gote(white)">%s wins</string>
 	<string name="learnFromYourMistakes">从您的失误中吸取教训</string>
 	<string name="learnFromThisMistake">从这个失误中吸取教训</string>
