--- a/translation/dest/team/id-ID.xml
+++ b/translation/dest/team/id-ID.xml
@@ -1,42 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="team">Team</string>
-  <string name="teams">Teams</string>
+  <string name="team">Tim</string>
+  <string name="teams">Tim</string>
   <plurals name="nbMembers">
-    <item quantity="other">%s members</item>
+    <item quantity="other">%s anggota</item>
   </plurals>
-  <string name="allTeams">All teams</string>
-  <string name="newTeam">New team</string>
-  <string name="myTeams">My teams</string>
-  <string name="noTeamFound">No team found</string>
-  <string name="joinTeam">Join team</string>
-  <string name="quitTeam">Leave team</string>
+  <string name="allTeams">Semua tim</string>
+  <string name="newTeam">Tim baru</string>
+  <string name="myTeams">Tim saya</string>
+  <string name="noTeamFound">Tidak ada tim yang ditemukan</string>
+  <string name="joinTeam">Gabung tim</string>
+  <string name="quitTeam">Keluar dari tim</string>
   <string name="anyoneCanJoin">Free for all</string>
   <string name="aConfirmationIsRequiredToJoin">A confirmation is required to join</string>
   <string name="joiningPolicy">Joining policy</string>
   <plurals name="teamLeaders">
-    <item quantity="other">Team leaders</item>
+    <item quantity="other">Ketua Tim</item>
   </plurals>
   <string name="teamBestPlayers">Best players</string>
-  <string name="teamRecentMembers">Recent members</string>
-  <string name="kickSomeone">Kick someone out of the team</string>
-  <string name="whoToKick">Who do you want to kick out of the team?</string>
+  <string name="teamRecentMembers">Anggota terkini</string>
+  <string name="kickSomeone">Keluarkan seseorang dari tim</string>
+  <string name="whoToKick">Siapa yang ingin Anda keluarkan dari tim?</string>
   <plurals name="xJoinRequests">
-    <item quantity="other">%s join requests</item>
+    <item quantity="other">%s ajukan permintaan</item>
   </plurals>
-  <string name="willBeReviewed">Your join request will be reviewed by the team leader.</string>
-  <string name="beingReviewed">Your join request is being reviewed by the team leader.</string>
-  <string name="teamBattle">Team Battle</string>
-  <string name="teamBattleOverview">A battle of multiple teams, each player scores points for their team</string>
-  <string name="teamTournament">Team tournament</string>
-  <string name="teamTournamentOverview">An Arena tournament that only members of your team can join</string>
-  <string name="messageAllMembers">Message all members</string>
-  <string name="messageAllMembersOverview">Send a private message to every member of the team</string>
-  <string name="messageAllMembersLongDescription">Send a private message to ALL members of the team.
-You can use this to call players to join a tournament or a team battle.
-Players who don\'t like receiving your messages might leave the team.</string>
-  <string name="teamsIlead">Teams I lead</string>
-  <string name="youWayWantToLinkOneOfTheseTournaments">You may want to link one of these upcoming tournaments?</string>
-  <string name="usersWhoCanManageThisTeam">Users who can manage this team</string>
-  <string name="leadersChat">Leaders chat</string>
+  <string name="willBeReviewed">Permintaan bergabung Anda akan ditinjau oleh ketua tim.</string>
+  <string name="beingReviewed">Permintaan bergabung Anda telah ditinjau oleh ketua tim.</string>
+  <string name="teamBattle">Pertarungan Tim</string>
+  <string name="teamBattleOverview">Pertarungan antara bebrapa tim, setiap pemain mencetak poin untuk timnya</string>
+  <string name="teamTournament">Turnamen tim</string>
+  <string name="teamTournamentOverview">Sebuah arena turnamen yang hanya bisa diikuti oleh anggota tim Anda</string>
+  <string name="messageAllMembers">Pesan semua anggota</string>
+  <string name="messageAllMembersOverview">Kirim pesan pribadi kepada semua anggota tim</string>
+  <string name="messageAllMembersLongDescription">Kirim pesan pribadi ke SEMUA anggota tim.
+Anda dapat menggunakan ini untuk memanggil pemain untuk bergabung ke turnamen atau pertarungan team.
+Pemain yang tidak suka menerima pesan anda dapat meninggalkan tim.</string>
+  <string name="teamsIlead">Tim yang anda pimpin</string>
+  <string name="youWayWantToLinkOneOfTheseTournaments">Apakah anda ingin menautkan salah satu turnamen ini yang akan datang?</string>
+  <string name="usersWhoCanManageThisTeam">Pengguna yang dapat mengatur tim</string>
+  <string name="leadersChat">Obrolan Pemimpin</string>
 </resources>
