--- a/translation/dest/tourname/id-ID.xml
+++ b/translation/dest/tourname/id-ID.xml
@@ -1,49 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="hourlyRapidArena">Hourly Rapid Arena</string>
-  <string name="hourlyRapid">Hourly Rapid</string>
-  <string name="hourlyXArena">Hourly %s Arena</string>
-  <string name="hourlyX">Hourly %s</string>
-  <string name="dailyRapidArena">Daily Rapid Arena</string>
-  <string name="dailyRapid">Daily Rapid</string>
-  <string name="dailyClassicalArena">Daily Classical Arena</string>
-  <string name="dailyClassical">Daily Classical</string>
-  <string name="dailyXArena">Daily %s Arena</string>
-  <string name="dailyX">Daily %s</string>
-  <string name="easternRapidArena">Eastern Rapid Arena</string>
-  <string name="easternRapid">Eastern Rapid</string>
-  <string name="easternClassicalArena">Eastern Classical Arena</string>
-  <string name="easternClassical">Eastern Classical</string>
-  <string name="easternXArena">Eastern %s Arena</string>
-  <string name="easternX">Eastern %s</string>
-  <string name="weeklyRapidArena">Weekly Rapid Arena</string>
-  <string name="weeklyRapid">Weekly Rapid</string>
-  <string name="weeklyClassicalArena">Weekly Classical Arena</string>
-  <string name="weeklyClassical">Weekly Classical</string>
-  <string name="weeklyXArena">Weekly %s Arena</string>
-  <string name="weeklyX">Weekly %s</string>
-  <string name="monthlyRapidArena">Monthly Rapid Arena</string>
-  <string name="monthlyRapid">Monthly Rapid</string>
-  <string name="monthlyClassicalArena">Monthly Classical Arena</string>
-  <string name="monthlyClassical">Monthly Classical</string>
-  <string name="monthlyXArena">Monthly %s Arena</string>
-  <string name="monthlyX">Monthly %s</string>
-  <string name="yearlyRapidArena">Yearly Rapid Arena</string>
-  <string name="yearlyRapid">Yearly Rapid</string>
-  <string name="yearlyClassicalArena">Yearly Classical Arena</string>
-  <string name="yearlyClassical">Yearly Classical</string>
-  <string name="yearlyXArena">Yearly %s Arena</string>
-  <string name="yearlyX">Yearly %s</string>
-  <string name="rapidShieldArena">Rapid Shield Arena</string>
-  <string name="rapidShield">Rapid Shield</string>
-  <string name="classicalShieldArena">Classical Shield Arena</string>
-  <string name="classicalShield">Classical Shield</string>
-  <string name="xShieldArena">%s Shield Arena</string>
-  <string name="xShield">%s Shield</string>
+  <string name="hourlyRapidArena">Sejam Arena Rapid</string>
+  <string name="hourlyRapid">Rapid Sejam</string>
+  <string name="hourlyXArena">Arena %s setiap jam</string>
+  <string name="hourlyX">%s Sejam</string>
+  <string name="dailyRapidArena">Arena Rapid Harian</string>
+  <string name="dailyRapid">Rapid Harian</string>
+  <string name="dailyClassicalArena">Arena Klasikal Harian</string>
+  <string name="dailyClassical">Klasikal Harian</string>
+  <string name="dailyXArena">Arena %s Harian</string>
+  <string name="dailyX">%s Harian</string>
+  <string name="easternRapidArena">Arena Rapid Ketimuran</string>
+  <string name="easternRapid">Rapid Ketimuran</string>
+  <string name="easternClassicalArena">Arena Klasikal Ketimuran</string>
+  <string name="easternClassical">Klasikal Ketimuran</string>
+  <string name="easternXArena">Arena %s Ketimuran</string>
+  <string name="easternX">%s Ketimuran</string>
+  <string name="weeklyRapidArena">Arena Rapid Mingguan</string>
+  <string name="weeklyRapid">Rapid Mingguan</string>
+  <string name="weeklyClassicalArena">Arena Klasikal Mingguan</string>
+  <string name="weeklyClassical">Klasikal Mingguan</string>
+  <string name="weeklyXArena">Arena %s Mingguan</string>
+  <string name="weeklyX">%s Mingguan</string>
+  <string name="monthlyRapidArena">Arena Rapid Bulanan</string>
+  <string name="monthlyRapid">Rapid Bulanan</string>
+  <string name="monthlyClassicalArena">Arena Klasikal Bulanan</string>
+  <string name="monthlyClassical">Klasikal Bulanan</string>
+  <string name="monthlyXArena">Arena %s Bulanan</string>
+  <string name="monthlyX">%s Bulanan</string>
+  <string name="yearlyRapidArena">Arena Rapid Tahunan</string>
+  <string name="yearlyRapid">Rapid Tahunan</string>
+  <string name="yearlyClassicalArena">Arena Klasikal Tahunan</string>
+  <string name="yearlyClassical">Klasikal Tahunan</string>
+  <string name="yearlyXArena">Arena %s Tahunan</string>
+  <string name="yearlyX">%s Tahunan</string>
+  <string name="rapidShieldArena">Arena Perisai Rapid</string>
+  <string name="rapidShield">Perisai Rapid</string>
+  <string name="classicalShieldArena">Arena Perisai Klasikal</string>
+  <string name="classicalShield">Perisai Klasikal</string>
+  <string name="xShieldArena">Arena Perisai %s</string>
+  <string name="xShield">%s Perisai</string>
   <string name="openingRapidArena">%s Rapid Arena</string>
   <string name="openingRapid">%s Rapid</string>
-  <string name="xTeamBattle">%s Team Battle</string>
-  <string name="eliteXArena">Elite %s Arena</string>
+  <string name="xTeamBattle">Pertempuran Tim %s</string>
+  <string name="eliteXArena">Arena Elite %s</string>
   <string name="eliteX">Elite %s</string>
-  <string name="xArena">%s Arena</string>
+  <string name="xArena">Arena %s</string>
 </resources>
